CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -12,9 +12,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [baomoi.com]
-match = -168.8%%
-title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
-url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
+match = -181.2%%
+title = Man United sở hữu hậu vệ Bayern Munich giá rẻ bất ngờ
+url = https://baomoi.com/man-united-so-huu-hau-ve-bayern-munich-gia-re-bat-ngo-c49827229.epi
 
 [www.thegioididong.com]
 match = -231.2%%
@@ -307,9 +307,9 @@ title = Đội tuyển U16 Việt Nam họp rút kinh nghiệm trước trận .
 url = https://daidoanket.vn/doi-tuyen-u16-viet-nam-hop-rut-kinh-nghiem-truoc-tran-gap-u16-myanmar-10284214.html
 
 [laodong.vn]
-match = -193.8%%
-title = Vì sao Pháp là thị trường chuyển nhượng ưa thích của ...
-url = https://laodong.vn/bong-da-quoc-te/vi-sao-phap-la-thi-truong-chuyen-nhuong-ua-thich-cua-premier-league-1370702.ldo
+match = -131.2%%
+title = Sét đánh tử vong một người phụ nữ ở Hòa Bình
+url = https://laodong.vn/xa-hoi/set-danh-tu-vong-mot-nguoi-phu-nu-o-hoa-binh-1376593.ldo
 
 [baolamdong.vn]
 match = -243.8%%
@@ -357,9 +357,9 @@ title = C1 Sport - phường Hóa An vô địch Giải bóng đá các xã ...
 url = https://baodongnai.com.vn/the-thao/202406/c1-sport-phuong-hoa-an-vo-dich-giai-bong-da-cac-xa-phuong-thi-tran-tinh-dong-nai-2024-eef4b09/
 
 [m.facebook.com]
-match = -93.8%%
-title = MỘC MIỀN NAM🌳 ⚡️MUA HÀNG LIÊN LẠC ZALO ĐỂ ...
-url = https://m.facebook.com/groups/hoiktxkhub/posts/2409465526100579/
+match = -106.2%%
+title = HR - TUYỂN DỤNG | 𝓗𝓮̣̂ 𝓽𝓱𝓸̂́𝓷𝓰 𝓣𝓻𝓪̀ 𝓢𝓾̛̃𝓪 𝓝𝓞̣𝓝𝓖
+url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8424586284232011/
 
 [thanhnien.vn]
 match = -187.5%%
@@ -715,4 +715,19 @@ url = https://www.vietnamplus.vn/chieu-toi-va-dem-38-nhieu-khu-vuc-co-mua-lon-de
 match = -12.5%%
 title = Về miền chiếu cói Ngan Dừa
 url = https://nongnghiep.vn/ve-mien-chieu-coi-ngan-dua-i288576.html
+
+[langsontv.vn]
+match = -200.0%%
+title = Câu lạc bộ Thiện nguyện Từ trái tim Lạng Sơn trao tủ sách ...
+url = https://langsontv.vn/news/475/73612/cau-lac-bo-thien-nguyen-tu-trai-tim-lang-son-trao-tu-sach-cho-cac-truong-hoc-tren-dia-ban-huyen-cao-loc
+
+[tiengchuong.chinhphu.vn]
+match = -237.5%%
+title = Đề xuất trừ hết điểm Giấy phép lái xe nếu phát hiện trong cơ ...
+url = https://tiengchuong.chinhphu.vn/de-xuat-tru-het-diem-giay-phep-lai-xe-neu-phat-hien-trong-co-the-nguoi-dieu-khien-co-chat-ma-tuy-113240806091625373.htm
+
+[capnuoccholon.com.vn]
+match = -50.0%%
+title = CÔNG TY CỔ PHẦN CẤP NƯỚC CHỢ LỚN
+url = https://capnuoccholon.com.vn/
 
