--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-06 05:57:11
+lastsearch = 2024-08-06 10:56:27
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,9 +12,9 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -35.3%%
-title = Can HOA come onto my property?
-url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
+match = -100.0%%
+title = Old man threw hands at HOA meeting : r/fuckHOA
+url = https://www.reddit.com/r/fuckHOA/comments/19743on/old_man_threw_hands_at_hoa_meeting/
 
 [www.quora.com]
 match = -200.0%%
@@ -337,8 +337,8 @@ title = 18-966 Department of Commerce v. New York (06/27/2019)
 url = https://www.supremecourt.gov/opinions/18pdf/18-966_bq7c.pdf
 
 [mpdc.dc.gov]
-match = -70.6%%
-title = Metropolitan Police Department - DC.gov
+match = -150.0%%
+title = | mpdc
 url = https://mpdc.dc.gov/
 
 [www.vietnam.vn]
@@ -354,7 +354,7 @@ url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-national-geographic-20
 [books.google.com]
 match = -194.1%%
 title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+18&source=bl&ots=rUQ6ExFz8-&sig=ACfU3U2LjFbDQFPPbO9rPFnslFvchsdPvw&hl=en&sa=X&ved=2ahUKEwjN6Iri8N6HAxXZtokEHcfvDnIQ6AF6BAgfEAM
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+18&source=bl&ots=rUQ6FpFC95&sig=ACfU3U3Zo7-NkCsJkAHnnGe2xFhmm2JbBg&hl=en&sa=X&ved=2ahUKEwi3v865vN-HAxWzrYkEHYj-MiQQ6AF6BAgaEAM
 
 [www.bankrate.com]
 match = 0.0%%
@@ -610,4 +610,9 @@ url = https://www.bachhoaxanh.com/kinh-nghiem-hay/tong-hop-18-loai-hoa-cat-tuong
 match = -41.2%%
 title = Thế Giới Hoa Đẹp | Ho Chi Minh City
 url = https://www.facebook.com/The.Gioi.Hoa.Dep.SalePage/
+
+[www.dora.colorado.gov]
+match = -188.2%%
+title = Colorado Department of Regulatory Agencies - Colorado.gov
+url = https://www.dora.colorado.gov/
 
