--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-08-06 01:39:43
+lastsearch = 2024-08-06 10:54:26
 
 [everon.online]
 match = -7.4%%
@@ -27,9 +27,9 @@ title = Bộ chăn ga gối Everon EPM-21069 | Khuyến mãi
 url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
-match = 18.5%%
-title = Bộ Chăn ga gối Everon EPM-21067
-url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
+match = 22.2%%
+title = Bộ chăn ga gối Everon EPM-21070
+url = https://everonhanquoc.vn/everon/12768/bo-chan-ga-goi-everon-epm-21070
 
 [everonhn.com.vn]
 match = -18.5%%
@@ -37,14 +37,14 @@ title = Bộ chăn ga Artemis ASM 20101 - Everon Hà Nội
 url = https://everonhn.com.vn/bo-chan-ga-artemis-asm-20101
 
 [everon.net.vn]
-match = 0.0%%
-title = Bộ Everon Ept-21045
-url = https://everon.net.vn/everon/2125/bo-everon-ept-21045
+match = 10.5%%
+title = Bộ Everon Epm-21070
+url = https://everon.net.vn/everon/2131/bo-everon-epm-21070
 
 [sieuthidemhanquoc.com.vn]
 match = 22.2%%
-title = Bộ chăn ga gối Everon EPM-21070
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21070-1529
+title = Bộ chăn ga gối Everon EPM-21060
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21060-1523
 
 [shopee.vn]
 match = -74.1%%
