--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-08-06 02:21:51
+lastsearch = 2024-08-06 10:54:07
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -107,9 +107,9 @@ title = 14 năm Rooney ra mắt MU: Hat-trick huyền thoại, "Quỷ đầu ...
 url = https://www.24h.com.vn/bong-da/14-nam-rooney-ra-mat-mu-hat-trick-huyen-thoai-quy-dau-dan-gam-vang-c48a993554.html
 
 [www.facebook.com]
-match = -76.9%%
-title = Lêdung Nguyễn
-url = https://www.facebook.com/profile.php?id=100007092827421&locale=en_GB
+match = -25.0%%
+title = Trust+ - HÀNH TRÌNH “PEEL DA” 14 NGÀY BẰNG ...
+url = https://www.facebook.com/Trustplus1304/posts/hành-trình-peel-da-14-ngày-bằng-mandelic-acid-chỉ-180k-của-mình-thật-ra-hôm-nay-/1992134787558676/
 
 [trongdoitam1.mysapo.net]
 match = 7.1%%
