--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-08-06 09:55:22
+lastsearch = 2024-08-06 10:44:16
 
 [shopee.vn]
 match = 14.3%%
@@ -22,19 +22,19 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = 3.6%%
-title = Chiếu điều hòa cao su non đa sắc xanh cốm hình hoa
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xanh-com-hinh-hoa.html?srsltid=AfmBOopwsUsZX2B4dFpvKTvGK6TDoUaJAcS7It1hOu3XRNYhRX8BgnEc
+match = 21.4%%
+title = Sử dụng chiếu điều hòa có tốt hay không?
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [tiki.vn]
-match = 28.6%%
-title = Chiếu điều hòa có mát không? Review 10 ...
-url = https://tiki.vn/blog/chieu-dieu-hoa/
+match = 10.7%%
+title = Chiếu lụa điều hòa hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu lụa điều hòa
 
 [sieuthidem.vn]
 match = 32.1%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOoqT2hyU9d1nRwF6kcIkgQ1is74xtwyIqyRaUxevSCzL2fk-1CmQ
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
 
 [kyoryo.vn]
 match = -35.7%%
@@ -99,7 +99,7 @@ url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 [vtvhyundai.vn]
 match = -14.3%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOopFBHXtr4IGocog-8AH4eLGQM3M0K4pGnqEwIxOwFzpg_SauYhp
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
 
 [noithattana.vn]
 match = 21.4%%
