--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-08-06 07:01:00
+lastsearch = 2024-08-06 10:49:57
 
 [www.everonvn.vn]
-match = 56.5%%
-title = Ruột gối Everon 45 x 65
-url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-45-x-65.html
+match = 68.0%%
+title = Ruột gối Everon Lite thấp
+url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-lite.html
 
 [happynest.vn]
 match = 3.4%%
@@ -17,9 +17,9 @@ title = Ruột gối truyền thống Everon 45x65 (Classic - Loại thấp)
 url = https://happynest.vn/shop/ERG4565T/ruot-goi-truyen-thong-everon-45x65-(classic---loai-thap).html
 
 [everonhanquoc.vn]
-match = -24.1%%
-title = Ruột Gối MicreLax Everon: Giải Pháp Hoàn Hảo Cho Giấc ...
-url = https://everonhanquoc.vn/everon/12711/ruot-goi-micrelax
+match = 17.2%%
+title = Bảng giá ruột gối mỏng Everon
+url = https://everonhanquoc.vn/everon/1508/ruot-goi-mong-everon
 
 [everonchinhhang.vn]
 match = 48.1%%
@@ -79,7 +79,7 @@ url = https://tongdailyeveron.com.vn/products/ruot-goi-thu-gian-co
 [www.diepxuan.com]
 match = 34.5%%
 title = Ruột gối kê Everon 45x65 thư giãn cổ - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html?srsltid=AfmBOoruh3nqHY9QRdUnmYOqIcHp2LZpvpsARuDSgmJVVk2CWLMbOaqX
+url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html
 
 [everonvn.com.vn]
 match = -20.7%%
