--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-06 09:10:52
+lastsearch = 2024-08-06 10:50:39
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html?srsltid=AfmBOoqNfImjLf9dda6DZ4wGf2cQqxChxhNsyGXXJ-2UurKYqVM9wMRY
+match = 18.2%%
+title = Thảm trải giường lông cừu TLC 04
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html
 
 [demre.com.vn]
 match = 18.2%%
-title = Bộ thảm ghế gỗ 1 dài 2 ngắn
-url = https://demre.com.vn/bo-tham-ghe-go-1-dai-2-ngan-5
+title = Thảm ghế thảm giường - Trang 3
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=3
 
 [decoviet.vn]
-match = 22.2%%
-title = Thảm Sofa Biên Hòa
-url = https://decoviet.vn/tham-sofa-bien-hoa/
+match = -50.0%%
+title = Thảm Lót Ghế Sofa | Thảm Phòng Khách Giá Rẻ
+url = https://decoviet.vn/tham-lot-ghe-sofa/
 
 [demolympia.com]
 match = -40.9%%
@@ -44,7 +44,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 [www.diepxuan.com]
 match = 50.0%%
 title = Điệp Xuân Thảm giường nỉ 150x190
-url = https://www.diepxuan.com/tham-giuong-ni-150x190.html?srsltid=AfmBOopPrhi6Pq9MixQTLqID2sILJV5OGZwg8avcrV3nyOZ38BbvSXc0
+url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
 
 [www.lazada.vn]
 match = -77.3%%
