--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-08-06 10:14:42
+lastsearch = 2024-08-06 10:45:19
 
 [www.tui.co.uk]
-match = -180.0%%
-title = Caribbean Cruises 2024 / 2025 | Marella Cruises
-url = https://www.tui.co.uk/cruise/caribbean-cruises/
+match = -120.0%%
+title = City Breaks and Short Breaks 2024 / 2025
+url = https://www.tui.co.uk/holidays/city-breaks
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -270,4 +270,9 @@ url = https://markets.businessinsider.com/news/stocks/eqs-pvr-tui-ag-release-acc
 match = -260.0%%
 title = Teddy Blake: Luxury Designer Bags, 100%% Made In Italy, Fair ...
 url = https://www.teddyblake.com/
+
+[www.virginholidays.co.uk]
+match = -46.7%%
+title = Singapore Holidays 2024/2025
+url = https://www.virginholidays.co.uk/destinations/far-east/singapore-holidays
 
