CI images update

--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-08-06 10:47:23
+lastsearch = 2024-08-06 11:21:22
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -27,8 +27,8 @@ title = Ao Dai Xanh Mint
 url = https://www.etsy.com/market/ao_dai_xanh_mint
 
 [www.evergreenrecreation.com]
-match = -157.1%%
-title = ICE SKATING & HOCKEY | Evergreen Park and ...
+match = 0.0%%
+title = 
 url = https://www.evergreenrecreation.com/224/Ice-Skating-Hockey
 
 [www.bbc.com]
@@ -312,9 +312,9 @@ title = Tổng hợp thông tin iPhone 16: Khi nào ra mắt và giá bao ...
 url = https://dienmaycholon.com/kinh-nghiem-mua-sam/tong-hop-thong-tin-iphone-16-khi-nao-ra-mat-gia-ban-bao-nhieu
 
 [www.tripadvisor.com]
-match = -242.9%%
-title = SÔNG BIÉN XANH, Hoi An - Restaurant Reviews, Photos & ...
-url = https://www.tripadvisor.com/Restaurant_Review-g298082-d25271727-Reviews-Song_Bien_Xanh-Hoi_An_Quang_Nam_Province.html
+match = -221.4%%
+title = Noisy hotel! - Review of Dong Xanh Hotel, Chau Doc ...
+url = https://www.tripadvisor.com/ShowUserReviews-g311303-d9794497-r549078009-Dong_Xanh_Hotel-Chau_Doc_An_Giang_Province.html
 
 [www.beyondblue.org.au]
 match = -257.1%%
