--- a/images/ruot-goi-ke-korea-45x65/config.ini
+++ b/images/ruot-goi-ke-korea-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
 lastopen = 2024-08-02 00:29:53
 
 [search]
-lastsearch = 2024-08-06 10:31:08
+lastsearch = 2024-08-06 11:26:55
 
 [demxanh.com]
-match = -47.8%%
-title = Ruột gối Olympia khuyến mãi giá rẻ nhất thị trường
-url = https://demxanh.com/ruot-goi-olympia.html
+match = -43.5%%
+title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
+url = https://demxanh.com/ruot-goi.html
 
 [sieuthidemonline.vn]
 match = -17.4%%
@@ -60,4 +60,9 @@ url = https://m.thitruongsi.com/combo-2-ruot-goi-hoa-hut-chan-khong-kt-45x65-155
 match = 33.3%%
 title = RUỘT GỐI 5S EVERON
 url = https://everon.com.vn/ruot-goi-5s-everon/
+
+[www.lazada.vn]
+match = 8.7%%
+title = Ruột Gối ôm Cứng Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/ruot-goi-om-cung/
 
