--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-08-06 00:12:46
+lastsearch = 2024-08-06 11:20:20
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -78,8 +78,8 @@ url = https://vi.wikipedia.org/wiki/Sao_Kim
 
 [nhua66a.com]
 match = -17.9%%
-title = THÙNG ĐÁ 16 LÍT - HIỆP THÀNH - FREE SHIP HCM
-url = https://nhua66a.com/product/thung-da-16-lit-hiep-thanh/
+title = THÙNG ĐÁ 16 LÍT - DUY TÂN - GIAO HÀNG TẬN NƠI
+url = https://nhua66a.com/product/thung-da-16-lit-duy-tan/
 
 [www.impehcm.org.vn]
 match = -21.4%%
@@ -102,9 +102,9 @@ title = Đã 16 ngày không ghi nhận ca mắc mới COVID-19 ở cộng ...
 url = https://baolamdong.vn/xahoi/202009/da-16-ngay-khong-ghi-nhan-ca-mac-moi-covid-19-o-cong-dong-viet-nam-tai-khoi-dong-nhieu-duong-bay-quoc-te-3022510/
 
 [afhanoi.com]
-match = -82.1%%
-title = [Tuần Lễ Vàng 2023] Miễn phí 20 ca nuôi cấy, theo dõi phôi ...
-url = https://afhanoi.com/tuan-le-vang-2023-mien-phi-20-ca-nuoi-cay-theo-doi-phoi-bang-he-thong-tu-dong-timelapse-toi-da-16-phoi-19-04-14-05-2023/
+match = -85.7%%
+title = [Tuần Lễ Vàng 2024] Miễn phí 100%% 15 ca Thụ tinh trong ống ...
+url = https://afhanoi.com/tuan-le-vang-2024-mien-phi-15-ca-thu-tinh-trong-ong-nghiem-ivf-19-04-19-05-2024/
 
 [archive.org]
 match = 14.3%%
