--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-08-06 10:33:34
+lastsearch = 2024-08-06 11:32:50
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -37,9 +37,9 @@ title = Tổng hợp quy định nhập cảnh Đài Loan 2024
 url = https://vnpay.vn/quy-dinh-nhap-canh-dai-loan-0pgkjx2c6vit
 
 [taiwandiary.vn]
-match = -52.4%%
-title = Hộ chiếu Đài Loan 2024 quyền lực như thế nào?
-url = https://taiwandiary.vn/2024/06/27/ho-chieu-dai-loan-2024-dung-thu-69/
+match = -100.0%%
+title = Tổng hợp các loại visa tại Đài Loan có thể bạn chưa biết
+url = https://taiwandiary.vn/2024/05/29/tong-hop-cac-loai-visa-tai-dai-loan/
 
 [www.roc-taiwan.org]
 match = -19.0%%
@@ -138,8 +138,8 @@ url = https://www.kkday.com/vi/product/134232
 
 [m.facebook.com]
 match = -157.1%%
-title = Ăn chơi Đài Loan 台灣 - 去哪吃啥? | Mọi người cho em hỏi
-url = https://m.facebook.com/groups/anchoidailoan/posts/1429629194414207/
+title = Ăn chơi Đài Loan 台灣 - 去哪吃啥? | **[REVIEW 14 NGÀY ...
+url = https://m.facebook.com/groups/anchoidailoan/posts/1338259560217838/
 
 [znews.vn]
 match = -85.7%%
