--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-08-06 06:41:03
+lastsearch = 2024-08-06 11:31:47
 
 [tiki.vn]
 match = 16.0%%
@@ -42,9 +42,9 @@ title = Văn phòng Kinh tế và Văn hóa Đài Bắc tại Việt Nam
 url = https://www.roc-taiwan.org/vn_vi/index.html
 
 [books.google.com]
-match = -28.0%%
-title = Của Cải Của Các Dân Tộc - Google Books Result
-url = https://books.google.com/books?id=GP7LEAAAQBAJ&pg=PT227&lpg=PT227&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=HCr9TQMtCr&sig=ACfU3U2v0U3ACpsbc1berBnX05TCIbQzJw&hl=en&sa=X&ved=2ahUKEwjesJj-9t6HAxV7l4kEHSSWKDYQ6AF6BAgkEAM
+match = -44.0%%
+title = Chiến sĩ Cộng Hòa - Page 12 - Google Books Result
+url = https://books.google.com/books?id=X2clAAAAMAAJ&pg=PA12&lpg=PA12&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=p30RZEb-Iw&sig=ACfU3U2uNBBzPV4owDsVrCs9aS2jXrAbdA&hl=en&sa=X&ved=2ahUKEwikoKGsxN-HAxXUL0QIHev8DcYQ6AF6BAgXEAM
 
 [www.skyscanner.com.vn]
 match = -48.0%%
