--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-08-06 02:19:23
+lastsearch = 2024-08-06 11:27:37
 
 [www.youtube.com]
 match = -52.0%%
@@ -62,9 +62,9 @@ title = 16 người Việt bị bắt tại Đài Loan vì lừa xuyên biên gi
 url = https://vietnamnet.vn/16-nguoi-viet-bi-bat-tai-dai-loan-vi-lua-xuyen-bien-gioi-497646.html
 
 [www.facebook.com]
-match = 12.0%%
-title = Xin chào, tôi ở Đài Loan | Kaohsiung
-url = https://www.facebook.com/toiodailoan/?locale=vi_VN
+match = -124.0%%
+title = 20240416 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞 ...
+url = https://www.facebook.com/ptsvietnamesenews/videos/20240416-bản-tin-tiếng-việt-pts-đài-loan-公視越南語新聞/452366227450173/
 
 [baotintuc.vn]
 match = -72.0%%
@@ -157,9 +157,9 @@ title = Nỗ lực cải thiện quan hệ hai bờ eo biển Đài Loan
 url = https://baomoi.com/no-luc-cai-thien-quan-he-hai-bo-eo-bien-dai-loan-c49120468.epi
 
 [vnexpress.net]
-match = -27.8%%
-title = topics-sitemap.xml
-url = https://vnexpress.net/topics-sitemap.xml?p=59
+match = -60.0%%
+title = Loạt tiêm kích F-16 hiện đại nhất Đài Loan bị hỏng do ...
+url = https://vnexpress.net/loat-tiem-kich-f-16-hien-dai-nhat-dai-loan-bi-hong-do-dong-dat-4730265.html
 
 [dantri.com.vn]
 match = -28.0%%
