--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-06 10:34:34
+lastsearch = 2024-08-06 11:21:41
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -131.2%%
-title = Deadpool & Wolverine - phân đoạn chưa chiếu.
-url = https://m.facebook.com/daiphatthanh.sound/photos/deadpool-wolverine-phân-đoạn-chưa-chiếu/1062488365243551/
+match = -25.0%%
+title = Hà Nội Riviu - Riviu.vn
+url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1471932070137191/
 
 [www.sjcallahabad.org]
 match = -212.5%%
