--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-06 10:36:19
+lastsearch = 2024-08-06 11:18:30
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -162.5%%
-title = Góc nhìn 02/08: Tín hiệu rung lắc đã được dự báo trước?
-url = https://vietstock.vn/2024/08/goc-nhin-0208-tin-hieu-rung-lac-da-duoc-du-bao-truoc-145-1215750.htm
+match = -225.0%%
+title = Phân tích kỹ thuật phiên chiều 05/08: Tâm lý thận trọng bao ...
+url = https://vietstock.vn/2024/08/phan-tich-ky-thuat-phien-chieu-0508-tam-ly-than-trong-bao-trum-thi-truong-585-1216444.htm
 
 [baohungyen.vn]
 match = -200.0%%
@@ -895,4 +895,9 @@ url = https://langsontv.vn/news/475/73612/cau-lac-bo-thien-nguyen-tu-trai-tim-la
 match = -87.5%%
 title = Kỳ cuối: Ám ảnh chuyến đi “một chiều”
 url = https://cadn.com.vn/ky-cuoi-am-anh-chuyen-di-mot-chieu-post299266.html
+
+[bocongan.gov.vn]
+match = -200.0%%
+title = Công an phường giúp đỡ người đi lạc trở về với gia đình ...
+url = https://bocongan.gov.vn/tin-tuc-su-kien/nguoi-tot-viec-tot/cong-an-phuong-giup-do-nguoi-di-lac-tro-ve-voi-gia-dinh-an-toan-d21-t40562.html
 
