--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-08-06 10:51:19
+lastsearch = 2024-08-06 11:22:02
 
 [demtot.com]
-match = 26.7%%
-title = Đệm lò xo Korea
-url = https://demtot.com/dem-lo-xo-lien-ket-korea/
+match = 77.8%%
+title = Đệm lò xo Techwood
+url = https://demtot.com/dem-lo-xo-lien-ket-techwood/
 
 [tuananh.vn]
 match = 52.4%%
@@ -22,9 +22,9 @@ title = [Freeship + Quà tặng] - Đệm lò xo Techwood Tuấn Anh rẻ ...
 url = https://shopee.vn/-Freeship-Quà-tặng-Đệm-lò-xo-Techwood-Tuấn-Anh-rẻ-nhất-thị-trường-i.74770078.6992817339
 
 [demxanh.com]
-match = -33.3%%
-title = Đệm lò xo Tuấn Anh Techwood không bóc dày 23cm
-url = https://demxanh.com/dem-lo-xo-techwood-sale-off-50.html
+match = -109.5%%
+title = Top 10 loại nệm lò xo liên kết chất lượng và bán chạy nhất!
+url = https://demxanh.com/top-10-loai-nem-lo-xo-lien-ket-chat-luong-va-ban-chay-nhat.html?srsltid=AfmBOopQWyetSFSSiBAWne3tAu35dVKapnb-x5cjremTdxt2PASq5dTe
 
 [maybedding.vn]
 match = 38.9%%
@@ -57,9 +57,9 @@ title = Đệm lò xo Hàn Việt Hải giá rẻ
 url = https://demsingapore.com/dem-lo-xo-han-viet-hai.html
 
 [lombom.com]
-match = -133.3%%
-title = Tổng kho nệm - đệm chính hãng khuyến mại 20-60%% Freeship!
-url = https://lombom.com/dem-nem/page/2/
+match = -119.0%%
+title = Nơi cung cấp nệm đệm lò xo cao cấp chính hãng tại Việt Nam!
+url = https://lombom.com/dem-lo-xo/
 
 [www.linkedin.com]
 match = 4.8%%
