--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-08-06 10:02:08
+lastsearch = 2024-08-06 11:24:07
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -127,7 +127,12 @@ title = Pin by Alesha Faicco on Desks - bedroom
 url = https://www.pinterest.com/pin/pin-von-alesha-faicco-auf-desks-bedroom--565483296932165432/
 
 [tonybed.com]
-match = -4.5%%
-title = Bộ Drap Ga Trải Giường Modal - 21
-url = https://tonybed.com/bo-drap-ga-trai-giuong-modal-21/
+match = -40.0%%
+title = Đầu giường
+url = https://tonybed.com/dau-giuong/
+
+[dongagroup.vn]
+match = -100.0%%
+title = Hơn 52 mẫu giường ngủ 1m6 đẹp giá rẻ | Giao hàng tận nhà
+url = https://dongagroup.vn/noi-that-phong-ngu/giuong-ngu/1m6-160.html
 
