--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-08-06 10:34:55
+lastsearch = 2024-08-06 11:26:34
 
 [xoptraisan.info]
 match = -115.8%%
@@ -17,9 +17,9 @@ title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
 url = https://thamaulac.com.vn/
 
 [thamvinhthuan.com]
-match = 26.3%%
-title = Thảm xốp hoạt hình 60 x 60 cm
-url = https://thamvinhthuan.com/san-pham/tham-xop-hoat-hinh-60-x-60-cm/
+match = 5.3%%
+title = Thảm xốp một màu 60cm x 60 cm
+url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
 
 [thamht.vn]
 match = 36.8%%
@@ -28,8 +28,8 @@ url = https://thamht.vn/collections/tham-xop
 
 [shopee.vn]
 match = -94.7%%
-title = thảm ghép 60x60cm giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
+title = Thảm Xốp Ghép Sàn, Thảm Nỉ Ghép Sàn Tường Lâm 60*60
+url = https://shopee.vn/Thảm-Xốp-Ghép-Sàn-Thảm-Nỉ-Ghép-Sàn-Tường-Lâm-60*60-Hàng-Việt-Nam-10-Tâm-Bịch-i.167631306.14814457758
 
 [thamtretho.com]
 match = 37.5%%
