CI images update

--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-06 03:51:41
+lastsearch = 2024-08-06 11:46:26
 
 [vinatools.com]
-match = -206.7%%
-title = Kéo cắt thép tấm BESSEY D216-280, thẳng bo trái - phải
-url = https://vinatools.com/keo-cat-ton-d216-sbsk/
+match = -140.0%%
+title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
+url = https://vinatools.com/keo-cat-ton-d-216-116/?srsltid=AfmBOooq-48yJTibh4rDmvjkfdE7kj-tb92VIdYh3T5I5G0XJaNCUG-T
 
 [www.vietnamairport.vn]
 match = -213.3%%
@@ -335,4 +335,9 @@ url = https://mss.anthem.com/california-mmp/caca_mmp_providerdirectory2022_eng.p
 match = -200.0%%
 title = Contact List - Hospitals - Ho Chi Minh City, Vietnam
 url = https://hcmc.vietnam.embassy.gov.au/files/hchi/list-of-hospitals-feb-2024.pdf
+
+[thudaumot.binhduong.gov.vn]
+match = -233.3%%
+title = Công bố Quyết định phê duyệt Quy hoạch chi tiết xây dựng ...
+url = https://thudaumot.binhduong.gov.vn/chi-tiet?id=ART240700000115
 
