--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-08-06 08:01:47
+lastsearch = 2024-08-06 11:45:46
 
 [changagoidemtamhao.com]
-match = -10.0%%
-title = Đệm PYEODA
-url = https://changagoidemtamhao.com/dem-pyeoda
+match = -5.0%%
+title = Bộ Chăn Ga Gối PYEODA LTT
+url = https://changagoidemtamhao.com/bo-chan-ga-goi-pyeoda-ltt
 
 [demsingapore.com]
 match = -70.0%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
 url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
 
 [demxanh.com]
-match = -40.0%%
-title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc
-url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac.html
+match = -70.0%%
+title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon.html
 
 [www.facebook.com]
 match = -75.0%%
@@ -112,7 +112,7 @@ title = Cận cảnh| Chăn ga gối Singapore Pyeoda Luxury 5 món ...
 url = https://www.youtube.com/watch?v=9Yf1j0Ru3dU
 
 [www.otofun.net]
-match = -165.0%%
-title = nội ngoại thất] - Nệm Xinh chuyên cung cấp sỉ/lẻ chăn ga gối ...
-url = https://www.otofun.net/threads/nem-xinh-chuyen-cung-cap-si-le-chan-ga-goi-nem-tu-binh-dan-toi-cao-cap-lien-he-094-112-0822.1392580/post-43950794
+match = -145.0%%
+title = nội ngoại thất] - Nệm Xinh chuyên cung cấp sỉ/lẻ chăn ga ...
+url = https://www.otofun.net/threads/nem-xinh-chuyen-cung-cap-si-le-chan-ga-goi-nem-tu-binh-dan-toi-cao-cap-lien-he-094-112-0822.1392580/page-32
 
