CI images update

--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-08-06 04:29:56
+lastsearch = 2024-08-06 11:39:18
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -32,9 +32,9 @@ title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
 url = https://m.facebook.com/cgvcinemavietnam/photos/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844924327674339/
 
 [thangnhomdongtam.com]
-match = -109.5%%
-title = Thang nhôm gấp 4 khúc TMH3D LD Đài Loan - Cao cấp - Giá tốt
-url = https://thangnhomdongtam.com/san-pham/thang-nhom-gap-4-khuc-chu-m-hang-lien-doanh-dai-loan-tmh3d
+match = -81.0%%
+title = Thang nhôm gấp 4 khúc THM4 LD Đài Loan - Hàng Cao cấp
+url = https://thangnhomdongtam.com/san-pham/thang-nhom-chu-m-cao-cap-hang-lien-doanh-dai-loan-thm4-can-nang-16-kg
 
 [thangnhomnhapkhau.com]
 match = -47.6%%
@@ -142,9 +142,9 @@ title = Lịch chiếu
 url = https://chieuphimquocgia.com.vn/movies
 
 [vnexpress.net]
-match = -100.0%%
-title = Tiêm kích F-16 Đài Loan rơi - Tin tức mới nhất 24h qua
-url = https://vnexpress.net/tag/tiem-kich-f-16-dai-loan-roi-1020827
+match = -95.2%%
+title = Loạt tiêm kích F-16 hiện đại nhất Đài Loan bị hỏng do ...
+url = https://vnexpress.net/loat-tiem-kich-f-16-hien-dai-nhat-dai-loan-bi-hong-do-dong-dat-4730265.html
 
 [vietsuntravel.com]
 match = -28.6%%
@@ -245,4 +245,9 @@ url = https://www.taiwanembassy.org/vnsgn_vi/cat/12.html
 match = -114.3%%
 title = Du lịch Đài Loan | Đặt Tour Đài Loan trọn gói giá ưu đãi ...
 url = https://travel.com.vn/du-lich-nuoc-ngoai/tour-dai-loan.aspx
+
+[www.dailymotion.com]
+match = -104.8%%
+title = Uyển Quân - Tập 16 -Phim Đài Loan Hay - Video Dailymotion
+url = https://www.dailymotion.com/video/x8gz4r4
 
