--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-08-06 11:26:13
 [www.diepxuan.com]
 match = -20.0%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOopM4Z-SUbaYV8hyR_3ZlzRQshY8GjL2oKUpt6IXfmsZQX8n561u
 
 [www.htlight.vn]
 match = -26.7%%
