--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-06 10:58:13
+lastsearch = 2024-08-06 11:34:46
 
 [shopee.vn]
-match = -152.6%%
-title = [Có sẵn] Chiếu trúc chiếu tre cho trẻ em, chieu truc hat nằm ...
-url = https://shopee.vn/-Có-sẵn-Chiếu-trúc-chiếu-tre-cho-trẻ-em-chieu-truc-hat-nằm-đẹp-mát-an-toàn-i.610736536.19889705939?publish_id=&sp_atk=af5df5ac-0fd0-4055-b8be-0e66d8e9614c&xptdk=af5df5ac-0fd0-4055-b8be-0e66d8e9614c
+match = -126.3%%
+title = Chiếu trúc chiếu tre cho trẻ em, chieu truc hat nằm đẹp ...
+url = https://shopee.vn/Chiếu-trúc-chiếu-tre-cho-trẻ-em-chieu-truc-hat-nằm-đẹp-mát-an-toàn-i.49212472.796826351
 
 [chieutrelanlan.com]
 match = -105.3%%
@@ -17,9 +17,9 @@ title = Chiếu tre hạt vàng cao cấp mắt mai không viền 1m4x1m9
 url = https://chieutrelanlan.com/chieu-tre-hat-vang-cao-cap-mat-mai-khong-vien-1m4x1m9-85.html
 
 [vongxepsaigon.vn]
-match = -100.0%%
-title = Chiếu trúc chiếu tre 1m2 hạt nâu đen hàng tốt loại 1
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-1m2-hat-nau-den-hang-tot-loai-1/
+match = -121.1%%
+title = Chiếu trúc chiếu tre hạt vàng trắng loại 1 hàng tốt 140cm
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-vang-trang-loai-1-hang-tot-140cm/
 
 [chieutrelinhchi.com]
 match = -89.5%%
