--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-08-06 06:21:01
+lastsearch = 2024-08-06 11:47:07
 
 [shopee.vn]
 match = 25.0%%
@@ -52,9 +52,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [m.facebook.com]
-match = -175.0%%
-title = Sơ lược về làng nghề dệt chiếu tại Long Định - Cần Đước
-url = https://m.facebook.com/notes/cộng-đồng-long-an/sơ-lược-về-làng-nghề-dệt-chiếu-tại-long-định-cần-đước/402374479949088/
+match = 22.2%%
+title = Chieu Lac
+url = https://m.facebook.com/chieu.lac.73/
 
 [baolongan.vn]
 match = -125.0%%
@@ -227,9 +227,9 @@ title = Phim có Minh Dự thu 4 tỷ đồng - Giải trí
 url = https://znews.vn/phim-co-minh-du-thu-4-ty-dong-post1488272.html
 
 [www.google.com]
-match = -112.5%%
-title = maps/@21.001139,105.847882,17z?hl=vi
-url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
+match = -206.2%%
+title = https://www.google.com/maps/@21.0506866,105.804746...
+url = https://www.google.com/maps/@21.0506866,105.8047464,19z?hl=vi
 
 [suckhoedoisong.vn]
 match = -131.2%%
