--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-08-06 03:48:56
+lastsearch = 2024-08-06 11:39:41
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -42,14 +42,14 @@ title = Chiếu Nhựa Bền Đẹp, Giá Sốc, Bán Chạy Nhất
 url = https://www.sendo.vn/chieu-nhua.htm
 
 [www.facebook.com]
-match = -20.0%%
-title = Chiếu nhựa ( đơn + gấp) Made in Viêt Nam
-url = https://www.facebook.com/media/set/?set=a.774846209209040.1073741830.763563843670610&type=3
+match = 63.2%%
+title = Chiếu Nhựa Thái Lan
+url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 15.0%%
-title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
+title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 
 [www.lazada.vn]
 match = 10.0%%
