--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-06 01:51:56
+lastsearch = 2024-08-06 11:47:28
 
 [demxanh.com]
-match = -18.5%%
-title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
+match = 37.0%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOoonTGwRFpxCLDPiT_qzRrPb8du16UeYx6w243vJVegjiSE0zggb
 
 [demre.com.vn]
 match = 66.7%%
@@ -42,9 +42,9 @@ title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [www.diepxuan.com]
-match = 11.1%%
-title = Điệp Xuân Chiếu trúc trung quốc
-url = https://www.diepxuan.com/chieu-truc/chieu-truc-trung-quoc.html
+match = 63.0%%
+title = Điệp Xuân Chiếu trúc Thái đen 160x200
+url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html?srsltid=AfmBOoo6HdG9B5wEherSz5xytvt-Ic99OkxcbpuUvQTJ9Il44vXsAQaS
 
 [shopee.vn]
 match = -18.5%%
