--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-06 03:36:02
+lastsearch = 2024-08-06 11:37:14
 
 [www.galottery.com]
 match = -7.7%%
@@ -67,9 +67,9 @@ title = GS Power 14 AWG (True American Wire Gauge) CCA ...
 url = https://www.amazon.com/American-Gauge-Copper-Wire/dp/B07D74Z4R1
 
 [www.youtube.com]
-match = -215.4%%
-title = Tayo S5 EP14 l Thanks, Gani l Tayo the Little Bus
-url = https://www.youtube.com/watch?v=UBbUr4PkwO4
+match = -230.8%%
+title = Gani Lawal Posts 14 Points, 14 Rebounds vs. Sky Force
+url = https://www.youtube.com/watch?v=tJOSML4nQWo
 
 [tayothelittlebus.fandom.com]
 match = -215.4%%
@@ -442,9 +442,9 @@ title =
 url = https://baslg.com/blog/juvenile-justice-system-georgia/
 
 [www.sciencedirect.com]
-match = -215.4%%
-title = Acta Materialia | ScienceDirect.com by Elsevier
-url = https://www.sciencedirect.com/journal/acta-materialia/articles-in-press
+match = -292.3%%
+title = Characterization of as-built and heat-treated Ni-Mn-Ga ...
+url = https://www.sciencedirect.com/science/article/pii/S2214860421000191
 
 [twitter.com]
 match = -61.5%%
