--- a/images/nem-caosu-lien-a-160x200x10/config.ini
+++ b/images/nem-caosu-lien-a-160x200x10/config.ini
@@ -24,7 +24,7 @@ url = https://fefurniture.com.vn/products/nem-cao-su-thien-nhien-lien-a-classic
 [demxanh.com]
 match = -11.1%%
 title = [Hot] Bảng giá nệm cao su Liên Á khuyến mãi 2024
-url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html
+url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html?srsltid=AfmBOoqbzfJrKrlFaBKWw77Ld93mdg2zEoSubAYlfGggCaqoB_sCrLKI
 
 [www.thegioinemvip.com]
 match = 0.0%%
