CI images update

--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-06 10:56:27
+lastsearch = 2024-08-06 12:14:40
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -354,7 +354,7 @@ url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-national-geographic-20
 [books.google.com]
 match = -194.1%%
 title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+18&source=bl&ots=rUQ6FpFC95&sig=ACfU3U3Zo7-NkCsJkAHnnGe2xFhmm2JbBg&hl=en&sa=X&ved=2ahUKEwi3v865vN-HAxWzrYkEHYj-MiQQ6AF6BAgaEAM
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+18&source=bl&ots=rUQ6FqAz9Z&sig=ACfU3U2VMcSgcMiZkHU_dZg21GFJxhBaQg&hl=en&sa=X&ved=2ahUKEwj2pJH3zd-HAxWNl4kEHXotCqIQ6AF6BAgbEAM
 
 [www.bankrate.com]
 match = 0.0%%
