--- a/images/tham-giuong-bode-150x190/config.ini
+++ b/images/tham-giuong-bode-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bode-150x190.html
 lastopen = 2024-06-17 17:46:25
 
 [search]
-lastsearch = 2024-08-06 11:30:44
+lastsearch = 2024-08-06 12:15:03
 
 [www.diepxuan.com]
-match = 37.5%%
-title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+match = 29.2%%
+title = Thảm giường nỉ 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [www.tripadvisor.com]
 match = -112.5%%
