--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-08-05 18:27:35
+lastsearch = 2024-08-06 12:29:26
 
 [demxanh.com]
 match = -9.1%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoow2o82jL6OwE9sutofhtFD2hRkHziFQpN3Dz7KCoG06li5ri6Q
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -84,7 +84,7 @@ url = https://www.toangiaphuc.vn/chieu-truc-hat-nau-vien-vai-1m6.html
 [ru9.vn]
 match = -18.2%%
 title = Các loại chiếu trúc được tin dùng, phù hợp với mọi lứa tuổi
-url = https://ru9.vn/blogs/magazine/cac-loai-chieu-truc
+url = https://ru9.vn/blogs/magazine/cac-loai-chieu-truc?srsltid=AfmBOoqafri8le-uZQsZhyiwFbEgTciUiu21xpnRpzPe67PSWc6rugaq
 
 [www.qdnd.vn]
 match = -63.2%%
