--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-08-06 08:12:28
+lastsearch = 2024-08-06 12:27:23
 
 [munghoangphat.com]
 match = 12.0%%
 title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-xanh.html
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
 
 [tiki.vn]
 match = -28.0%%
@@ -17,9 +17,9 @@ title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn bung 16m có đáy
 
 [shopee.vn]
-match = -12.0%%
-title = mùng chụp tự bung đỉnh vuông giá tốt Tháng 7, 2024
-url = https://shopee.vn/search?keyword=mùng chụp tự bung đỉnh vuông
+match = -48.0%%
+title = Màn chụp vuông - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
+url = https://shopee.vn/list/màn chụp/vuông
 
 [www.mungbaobao.com]
 match = 48.0%%
