--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-08-06 11:36:11
+lastsearch = 2024-08-06 12:28:24
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -34,7 +34,7 @@ url = https://www.mantubung.com/man-tu-bung-dinh-vuong-1m8-x-2m-x-1m8-85258.html
 [www.lazada.vn]
 match = 25.0%%
 title = Mùng Tự Bung đỉnh Vuông Giá Tốt T08/2024
-url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/
+url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/?srsltid=AfmBOoobuUMe2Gm8zmFYPDGJAOK3oZwRGfAQIeP-T4beXYQYfatiNhP2
 
 [munghoangphat.com]
 match = 41.7%%
@@ -175,4 +175,9 @@ url = https://www.linkedin.com/posts/panoramaglamping_panoramaglamping-glampingl
 match = -9.5%%
 title = Legendary Chocolatier
 url = https://m.facebook.com/photo.php?fbid=760418262787126&set=a.548320197330268&type=3
+
+[tbmart.vn]
+match = 70.8%%
+title = Màn Chụp Tự Bung Đỉnh Vuông
+url = https://tbmart.vn/san-pham/man-chup-tu-bung-dinh-vuong/
 
