--- a/images/nem-diamold-tc-140x190x07/config.ini
+++ b/images/nem-diamold-tc-140x190x07/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-diamold-tc-140x190x07.html
 lastopen = 2024-06-10 11:58:28
 
 [search]
-lastsearch = 2024-08-06 05:31:57
+lastsearch = 2024-08-06 12:29:48
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -12,9 +12,9 @@ title = Nệm Diamold TC 140x190x07 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-diamold-tc-140x190x07.html
 
 [www.magazineluiza.com.br]
-match = -72.0%%
-title = Pillow Top Protetor de Colchão Macio Soft Casa Dona
-url = https://www.magazineluiza.com.br/pillow-top-protetor-de-colchao-macio-soft-casa-dona/p/dec4g6j26b/cm/pllt/
+match = -108.0%%
+title = Pillow top casal pra um conforto extra na cama todos os dias
+url = https://www.magazineluiza.com.br/busca/pillow+top+casal/
 
 [www.killerspin.com]
 match = -84.0%%
