--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-08-06 11:00:59
+lastsearch = 2024-08-06 12:25:03
 
 [www.cms.gov]
 match = 4.5%%
@@ -628,8 +628,8 @@ url = https://www.bpelsg.ca.gov/pubs/num_eng_82.pdf
 
 [ftp.wildfire.gov]
 match = -22.7%%
-title = Management ActionPoints BobcatFire
-url = https://ftp.wildfire.gov/public/incident_specific_data/calif_s/2020_Incidents/CA-ANF-003687_Bobcat/GIS/Products/20200924/MAP_archE_land_20200924_0023_Bobcat_CAANF3687.pdf
+title = OPS_IR_Overview_archE_land_...
+url = https://ftp.wildfire.gov/public/incident_specific_data/calif_s/2020_Incidents/CA-ANF-003687_Bobcat/GIS/Products/20200922/OPS_IR_Overview_archE_land_20200922_0810_Bobcat_CAANF3687_0922Day.pdf
 
 [www.smfd.org]
 match = -113.6%%
@@ -815,4 +815,9 @@ url = https://files.monterey.gov/Document Center/City Hall/City clerk/Charters/1
 match = 0.0%%
 title = Shui zhong yang [LpM2d5]
 url = https://financialservices.gov.in/beta/digital_archive/akam-xml-new/screen04.html?video_id=video/Marathi/7&YT=https://detsad147vrn.ru/6297841fyw6jcwayx4p24ny13afil-test-domenrua5fe43y
+
+[isp.illinois.gov]
+match = -40.9%%
+title = NCIC Code Manual as of December 31, 2022
+url = https://isp.illinois.gov/LawEnforcement/NCICCodeManual
 
