CI images update

--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-08-06 10:01:47
+lastsearch = 2024-08-06 12:43:53
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -67,9 +67,9 @@ title = Chăn ga gối Sông Hồng Cao Cấp Urban UC22 024
 url = https://thegioinem.com/chan-ga-goi-song-hong-cao-cap-urban-uc22-024.html
 
 [shopee.vn]
-match = -83.3%%
-title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
-url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
+match = -75.0%%
+title = Bộ ga gối trải giường, Bộ ga giường drap nệm, ga chun đủ ...
+url = https://shopee.vn/Bộ-ga-gối-trải-giường-Bộ-ga-giường-drap-nệm-ga-chun-đủ-mọi-kích-cỡ-1m2-1m4-1m6-1m8-2m-2m2-i.483546614.15837908133
 
 [everonletrongtan.com]
 match = 31.8%%
