--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-08-06 09:15:24
+lastsearch = 2024-08-06 12:38:19
 
 [www.everonqb.com]
-match = -8.7%%
-title = Everon Quảng Bình Vỏ gối ôm EPCOCEAN 80x100
-url = https://www.everonqb.com/vo-goi-om-epcocean-80x100.html
+match = 0.0%%
+title = Everon Quảng Bình Vỏ gối ôm EPC19055 80x100
+url = https://www.everonqb.com/vo-goi-om-epc19055-80x100.html
 
 [www.reddit.com]
 match = -91.3%%
@@ -24,7 +24,7 @@ url = https://everonletrongtan.com/bo-chan-ga-goi-everon-es1804
 [www.diepxuan.com]
 match = 30.4%%
 title = Vỏ gối ôm EP1735 80x100 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-om-ep1735-80x100.html
+url = https://www.diepxuan.com/vo-goi-om-ep1735-80x100.html?srsltid=AfmBOooQOslkdG8Kw8CI1t6_H3zoJy4p9L7GZJrOH7rOG1efQgYmfAhw
 
 [forum.cartridgecollectors.org]
 match = -21.7%%
