--- a/images/bo-ga-chun-chan-lua-warmdream-180x200-hq/config.ini
+++ b/images/bo-ga-chun-chan-lua-warmdream-180x200-hq/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-lua-warmdream-180x200-hq.html
 lastopen = 2024-06-10 01:18:52
 
 [search]
-lastsearch = 2024-08-06 11:00:38
+lastsearch = 2024-08-06 12:41:08
 
 [www.diepxuan.com]
 match = 45.0%%
 title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html?srsltid=AfmBOoo-nuPducdOvRLO353QZsrp-FcoHnCuzPOjc9yysmGd1AUkP6Pb
 
 [www.amazon.com]
 match = 10.0%%
