--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-06 09:56:01
+lastsearch = 2024-08-06 12:46:39
 
 [www.instagram.com]
 match = -123.1%%
@@ -12,9 +12,9 @@ title = Chan Dior Sunshade (@chan_dior_sunshade)
 url = https://www.instagram.com/chan_dior_sunshade/
 
 [hk.linkedin.com]
-match = -215.4%%
-title = Vincy Chan - Christian Dior高級時裝公司
-url = https://hk.linkedin.com/in/vincy-chan-982992221
+match = -100.0%%
+title = Hoi Yee Ng - Christian Dior Couture
+url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
 match = -253.8%%
@@ -47,8 +47,8 @@ title = Chan Hoi-wan, chief executive officer of Chinese Estates ...
 url = https://www.gettyimages.com/detail/news-photo/chan-hoi-wan-chief-executive-officer-of-chinese-estates-news-photo/1231895917
 
 [www.facebook.com]
-match = -69.2%%
-title = K11 Musea's post - Facebook
+match = -215.4%%
+title = K11 Musea - 【🏖️Ready to hit the beach with Dior ...
 url = https://www.facebook.com/K11MUSEA/posts/️ready-to-hit-the-beach-with-dior-at-hong-kongs-first-ever-dioriviera-pop-up-sur/1604696716398853/
 
 [www.vntg.com]
@@ -224,7 +224,7 @@ url = https://www.blue17.co.uk/vintage-blog/midcentury-models-renee-breton/
 [shopee.vn]
 match = -176.9%%
 title = chăn ga dior giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/
+url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/ 
 
 [hongkongfp.com]
 match = -269.2%%
