--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-08-06 11:25:31
+lastsearch = 2024-08-06 12:44:54
 
 [shopee.vn]
 match = 56.2%%
@@ -12,9 +12,9 @@ title = chăn cừu mai rùa đen
 url = https://shopee.vn/chăn-cừu-mai-rùa-đen-i.39468618.939856303
 
 [www.instagram.com]
-match = -162.5%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -12.5%%
+title = Chan Hoi Wai (@highwaychanchan)
+url = https://www.instagram.com/highwaychanchan/
 
 [vi.wikipedia.org]
 match = 28.6%%
