--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-06 10:37:45
+lastsearch = 2024-08-06 12:47:39
 
 [hoa18.com]
 match = -63.2%%
@@ -19,7 +19,7 @@ url = https://www.youtube.com/watch?v=NPdIFgtFTso
 [kallos.co]
 match = -105.3%%
 title = Mệnh khuyết HOẢ: 18 phương pháp cải vận hiệu quả
-url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua
+url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua?srsltid=AfmBOoq7duUD331On7WS_8qsvPgpacIApxLApJvklzDHJpY7UrtpRsWO
 
 [www.facebook.com]
 match = -52.6%%
