--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-08-06 11:18:09
+lastsearch = 2024-08-06 12:37:59
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -22,9 +22,9 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.yellowpages.vn]
-match = 0.0%%
-title = danh sách Chiếu Nhựa
-url = https://www.yellowpages.vn/tgcls/10490435/Chiếu-Nhựa.html?j=0
+match = -5.3%%
+title = sản xuất chiếu nhựa
+url = https://www.yellowpages.vn/tgcls/40490435/sản-xuất-chiếu-nhựa.html?j=3
 
 [www.dienmayxanh.com]
 match = -35.7%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = -3.6%%
-title = Chiếu nhựa Việt Nam 1m8 -2m GIÁ RẺ NHẤT - CN182M
-url = https://www.sendo.vn/chieu-nhua-vie-t-nam-1m8-2m-gia-re-nha-t-48369789.html
+match = 17.9%%
+title = Chiếu nhựa nguyên sinh gấp gọn 1m8 x 3m
+url = https://www.sendo.vn/chieu-nhua-nguyen-sinh-gap-gon-1m8-x-3m-hang-viet-nam-chat-luong-cao-116062190.html
 
 [mia.vn]
 match = -7.1%%
