--- a/images/nem-caosu-lien-a-classic-180x200x10/config.ini
+++ b/images/nem-caosu-lien-a-classic-180x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 lastopen = 2024-07-07 18:25:44
 
 [search]
-lastsearch = 2024-08-06 09:54:00
+lastsearch = 2024-08-06 12:33:37
 
 [nemgiakho.com]
 match = 8.6%%
@@ -14,7 +14,7 @@ url = https://nemgiakho.com/nem-lien-a-1m8-chinh-hang-gia-re.html
 [www.liena.com.vn]
 match = 8.6%%
 title = Nệm Cao Su Thiên Nhiên 100%% Liên Á Cao Cấp Giá Tốt
-url = https://www.liena.com.vn/nem/nem-cao-su-thien-nhien?srsltid=AfmBOorfg-7EPhkoojqM96aVyVASdtCEffFL8G820SOnanJZzwvi90a1
+url = https://www.liena.com.vn/nem/nem-cao-su-thien-nhien
 
 [fefurniture.com.vn]
 match = 20.0%%
@@ -34,7 +34,7 @@ url = https://www.thegioinem.vn/vn/product/brand/nem-lien-a-15.html
 [demxanh.com]
 match = 57.1%%
 title = Đệm cao su Liên Á Classic (dày 5cm, 10cm)
-url = https://demxanh.com/dem-cao-su-lien-a-classic.html?srsltid=AfmBOorxJ67vT2KVeIwXSomX4U3cRaGZSAJSSY6KmywKQhvyTQImap7w
+url = https://demxanh.com/dem-cao-su-lien-a-classic.html
 
 [demcaosuliena.com]
 match = 48.0%%
