--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-08-06 11:22:02
+lastsearch = 2024-08-06 12:44:33
 
 [demtot.com]
-match = 77.8%%
-title = Đệm lò xo Techwood
-url = https://demtot.com/dem-lo-xo-lien-ket-techwood/
+match = 4.8%%
+title = Tag Archives: đệm lò xo
+url = https://demtot.com/tag/dem-lo-xo/
 
 [tuananh.vn]
 match = 52.4%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/-Freeship-Quà-tặng-Đệm-lò-xo-Techwood-Tuấn-Anh-
 [demxanh.com]
 match = -109.5%%
 title = Top 10 loại nệm lò xo liên kết chất lượng và bán chạy nhất!
-url = https://demxanh.com/top-10-loai-nem-lo-xo-lien-ket-chat-luong-va-ban-chay-nhat.html?srsltid=AfmBOopQWyetSFSSiBAWne3tAu35dVKapnb-x5cjremTdxt2PASq5dTe
+url = https://demxanh.com/top-10-loai-nem-lo-xo-lien-ket-chat-luong-va-ban-chay-nhat.html
 
 [maybedding.vn]
 match = 38.9%%
