--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-08-06 08:01:03
+lastsearch = 2024-08-06 12:33:18
 
 [www.instagram.com]
-match = -38.9%%
-title = AN 🍀NEM NƯỚNG HỒ LÔ 100k /KG 2 GÓI
-url = https://www.instagram.com/p/CoMI1rCrlEm/
+match = -105.6%%
+title = Farmers Market | 🔥 NEM NƯỚNG ĐẬM VỊ TRUYỀN ...
+url = https://www.instagram.com/farmersmarketvietnam/p/C8LpJbxM717/
 
 [www.lazada.vn]
 match = -61.1%%
@@ -17,9 +17,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -11.1%%
-title = Nem Nướng | Ho Chi Minh City
-url = https://www.facebook.com/p/Nem-Nướng-100054522756775/
+match = -161.1%%
+title = ‼️ Tụ điểm "BÁNH XÈO NAM BỘ - NEM LỤI - ĐỒ ĂN VẶT chỉ ...
+url = https://www.facebook.com/anuongtaithanhhoa/videos/️-tụ-điểm-bánh-xèo-nam-bộ-nem-lụi-đồ-ăn-vặt-chỉ-từ-30k-ngay-50b-triệu-quốc-đạt-m/1219756859406844/
 
 [thegioinem.com]
 match = -111.1%%
@@ -27,9 +27,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.youtube.com]
-match = -111.1%%
-title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
-url = https://www.youtube.com/watch?v=guu4UvG6cKY
+match = -122.2%%
+title = Bà Tân Vlog - Làm Mâm Bánh Đa Nem Siêu To Khổng Lồ
+url = https://www.youtube.com/watch?v=qlX0ZxCURE0
 
 [www.proz.com]
 match = -183.3%%
@@ -42,9 +42,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -94.4%%
-title = Người Việt Bolsa/Orange County | ❤️‍🔥❤️‍🔥NEM CHUA ...
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2893614240788940/
+match = -161.1%%
+title = Quay lại NEM NƯỚNG ĐÀ LẠT - BÉ... - Địa điểm ăn uống ...
+url = https://m.facebook.com/story.php/?story_fbid=763585472473204&id=100064652743390
 
 [lanchi.vn]
 match = 16.7%%
@@ -52,9 +52,9 @@ title = NEM CHUA HÀ THÀNH 200G
 url = https://lanchi.vn/san-pham/nem-chua-ha-thanh-200g/
 
 [www.tiktok.com]
-match = -77.8%%
-title = How Long to Cook Nem Nuong in Air Fryer
-url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
+match = -155.6%%
+title = Hướng Dẫn Cách Đánh Cú Ném Biên Siêu Cấp #clashofclans ...
+url = https://www.tiktok.com/@akarigaming66/video/7366906266075106576?lang=en
 
 [thuvienphapluat.vn]
 match = -133.3%%
