--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-08-06 01:46:41
+lastsearch = 2024-08-06 12:32:57
 
 [demxanh.com]
 match = -41.2%%
@@ -12,24 +12,24 @@ title = Thảm trải sàn Bali siêu khuyến mại
 url = https://demxanh.com/tham-trai-san-bali.html
 
 [tiki.vn]
-match = -129.4%%
-title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mới
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-moi-p41436661.html?spid=41436690
+match = -105.9%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=44108490
 
 [www.lazada.vn]
-match = -158.8%%
-title = Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp, Sang Trọng, ...
-url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-cao-cap-sang-trong-120x160cm-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinhvv-i1557646010.html
+match = -135.3%%
+title = Thảm Lì Bali Nhập Khẩu Cao Cấp, Sang Trọng 120x160 ...
+url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html
 
 [thegioidemviet.vn]
-match = -152.9%%
-title = Thảm trải sàn Bali M3 mẫu đẹp, giá rẻ nhất thị trường
-url = https://thegioidemviet.vn/tham-trai-san-bali-m3/
+match = -182.4%%
+title = Thảm trải sàn Bali M1 cao cấp, giá tốt nhất trên thị trường
+url = https://thegioidemviet.vn/tham-trai-san-bali-m1/
 
 [sammas.vn]
-match = -111.8%%
-title = Thảm lì ép Hàn Quốc (M2 hoa vàng) - STHA0011
-url = https://sammas.vn/tham-li-ep-han-quoc-stha0011
+match = -58.8%%
+title = Thảm lì ép Hàn Quốc (M13) - STHA0008
+url = https://sammas.vn/tham-li-ep-han-quoc-stha0008
 
 [shopee.vn]
 match = -200.0%%
@@ -67,8 +67,8 @@ title = Những thông số kích thước thảm trải sàn thường dùng ch
 url = http://thamachau.vn/nhung-thong-so-kich-thuoc-tham-trai-san-thuong-dung
 
 [demtot.vn]
-match = -182.4%%
-title = Lưu trữ Thảm BALI trải sàn - Chăn ga gối đệm thảm Trần Hậu
+match = 5.9%%
+title = Lưu trữ Thảm BALI trải sàn
 url = https://demtot.vn/tham-nhap-khau
 
 [winmart.onl]
