--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-06 03:45:52
+lastsearch = 2024-08-06 12:40:01
 
 [bilystore.vn]
-match = -95.2%%
-title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-trai-san-phong-ngu/
+match = -81.0%%
+title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
+url = https://bilystore.vn/tham-phong-ngu-na14/
 
 [shopee.vn]
 match = -109.5%%
@@ -153,8 +153,8 @@ url = https://noithattamviet.net/cam-nang/tong-hop-cac-mau-giuong-quan-doi-ben-d
 
 [noithatcaco.vn]
 match = -95.2%%
-title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOopJJ24eguQA-j77RakHQ64CRE03jopKKK8SfhbnIVoJ3Jvbq-g6
+title = Kinh nghiệm chọn mua giường 1m4 chất lượng, bền đẹp ...
+url = https://noithatcaco.vn/cam-nang-noi-that/giuong-1m4-500.html
 
 [dogohiephien.vn]
 match = -104.8%%
