--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-08-06 10:13:59
+lastsearch = 2024-08-06 12:41:49
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOooXyOqGm1KbgzWpAM3NtTbszDaL01R1O3BfCkBPJy7Zlrhx_iMt
+url = https://demxanh.com/tham-trai-san-bali.html
 
 [www.lazada.vn]
 match = -117.4%%
 title = Thảm Lì Bali - Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp, Sang ...
-url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-cao-cap-sang-trong-120x160cm-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinhvv-i1557646010-s11108591003.html?from_gmc=1&fl_tag=1&srsltid=AfmBOooLYga_jO8yRapSlo2WXBG06eKCqAEObODmlk2sjd-KU24-rd52
+url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-cao-cap-sang-trong-120x160cm-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinhvv-i1557646010-s11108591003.html?from_gmc=1&fl_tag=1
 
 [tiki.vn]
 match = -47.8%%
 title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p33139180.html
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=71118853
 
 [thegioidemviet.vn]
 match = -65.2%%
