--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-08-06 05:11:58
+lastsearch = 2024-08-06 12:35:01
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -27,9 +27,9 @@ title = Li Zhang, PhD
 url = https://profiles.ucsf.edu/li.zhang
 
 [www.ncbi.nlm.nih.gov]
-match = -73.7%%
-title = EFFECTS OF MUSCLE STRENGTHENING AND ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8814870/
+match = -152.6%%
+title = SARS-CoV-2 detection, viral load and infectivity over ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7323671/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
