CI images update

--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-08-06 11:26:13
+lastsearch = 2024-08-06 12:44:22
 
 [www.diepxuan.com]
 match = -20.0%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOopM4Z-SUbaYV8hyR_3ZlzRQshY8GjL2oKUpt6IXfmsZQX8n561u
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [www.htlight.vn]
 match = -26.7%%
