--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-06 12:14:40
+lastsearch = 2024-08-06 12:49:08
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,9 +12,9 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -100.0%%
-title = Old man threw hands at HOA meeting : r/fuckHOA
-url = https://www.reddit.com/r/fuckHOA/comments/19743on/old_man_threw_hands_at_hoa_meeting/
+match = -141.2%%
+title = The HOA hates this man. : r/suspiciouslyspecific
+url = https://www.reddit.com/r/suspiciouslyspecific/comments/rn50gb/the_hoa_hates_this_man/
 
 [www.quora.com]
 match = -200.0%%
@@ -352,9 +352,9 @@ title = buc anh dep - elle man - 18
 url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-national-geographic-2018/attachment/screen-shot-2018-12-28-at-9-45-53-pm/
 
 [books.google.com]
-match = -194.1%%
-title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+18&source=bl&ots=rUQ6FqAz9Z&sig=ACfU3U2VMcSgcMiZkHU_dZg21GFJxhBaQg&hl=en&sa=X&ved=2ahUKEwj2pJH3zd-HAxWNl4kEHXotCqIQ6AF6BAgbEAM
+match = -105.9%%
+title = The Monthly Army List - Google Books Result
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+18&source=bl&ots=kbdnoe70hY&sig=ACfU3U1udmDIgRqwQoYq9eEkylEOdiNJ2Q&hl=en&sa=X&ved=2ahUKEwiZ_5zR1d-HAxWEEFkFHW3EHHAQ6AF6BAgXEAM
 
 [www.bankrate.com]
 match = 0.0%%
