--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-08-06 11:40:39
+lastsearch = 2024-08-06 12:48:46
 
 [www.youtube.com]
 match = -420.0%%
@@ -17,9 +17,9 @@ title = Tung's Acupuncture points 33.13 (Ren shi), 33.14 (Di ...
 url = https://www.sinimed.co.il/en/acupuncture/en-33-13-33-14-33-15/
 
 [www.tumblr.com]
-match = -50.0%%
-title = ren 14dwy on Tumblr
-url = https://www.tumblr.com/tagged/ren 14dwy
+match = -40.0%%
+title = 14dwy ren on Tumblr
+url = https://www.tumblr.com/tagged/14dwy ren
 
 [www.garagejournal.com]
 match = -200.0%%
@@ -37,9 +37,9 @@ title = Ren (@Renmakesmusic) / X
 url = https://twitter.com/renmakesmusic
 
 [www.facebook.com]
-match = -390.0%%
-title = Ren - Coming up to 14 years of living with a chronic...
-url = https://www.facebook.com/renmakesmusic/posts/coming-up-to-14-years-of-living-with-a-chronic-illnessi-always-said-if-i-ever-ha/913039023526946/
+match = -370.0%%
+title = AcuPro Academy - Ren 14 (CV 14) located 6 cun above ...
+url = https://www.facebook.com/photo.php?fbid=1547299565411654&id=393176087490680&set=a.395996077208681
 
 [books.google.com]
 match = -460.0%%
@@ -97,9 +97,9 @@ title =
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8733268/
 
 [www.tiktok.com]
-match = -500.0%%
-title = Tallest teenager living (male): 7 ft 3.02 in (221.03 cm) 14-year ...
-url = https://www.tiktok.com/@guinnessworldrecords/video/6896585098825698562?lang=en
+match = -70.0%%
+title = Ren 14 Days with You
+url = https://www.tiktok.com/discover/ren-14-days-with-you
 
 [nordicanglers.com]
 match = -120.0%%
