--- a/images/nem-everon-180x200x9/config.ini
+++ b/images/nem-everon-180x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x9.html
 lastopen = 2024-06-06 17:09:32
 
 [search]
-lastsearch = 2024-08-06 08:06:35
+lastsearch = 2024-08-06 12:45:41
 
 [www.everonvn.vn]
 match = -75.0%%
@@ -19,7 +19,7 @@ url = https://everon.vip/nem-everon-ceramic
 [everonvn.com.vn]
 match = 20.0%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOorOqdVvZMVDXk5r7bQHBeHpX8kF_hncMUOnBwxOAKcUX-FcsW-5
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [www.changagoidemeveron.vn]
 match = -105.0%%
