--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-08-06 06:56:25
+lastsearch = 2024-08-06 12:59:38
 
 [www.thanhthuyhanh.com]
 match = -50.0%%
@@ -14,7 +14,7 @@ url = https://www.thanhthuyhanh.com/products/ruot-goi-nam-dream-zone
 [ninhouse.vn]
 match = -171.4%%
 title = Ruột gối nằm giá rẻ NIN House chính hãng tại Tphcm
-url = https://ninhouse.vn/collections/ruot-goi-1?srsltid=AfmBOor_jpvGxSgkxe-wVb_iYhxiQ1FF-H2tZeyzI9rEXzhgxMt8E_nv
+url = https://ninhouse.vn/collections/ruot-goi-1
 
 [elambo.vn]
 match = -142.9%%
@@ -34,7 +34,7 @@ url = https://changagoidemsonghong.online/ruot-chan-ruot-goi-song-hong.html
 [demxanh.com]
 match = -150.0%%
 title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html?srsltid=AfmBOopY4nyhJtwSbmksa0j6WVtHuoyetx_GHjISE0Z2azMwYt5VdJtc
+url = https://demxanh.com/ruot-goi.html
 
 [www.diepxuan.com]
 match = -100.0%%
@@ -59,12 +59,12 @@ url = https://songhonghanoi.vn/bang-gia-vo-goi-ruot-goi-song-hong-moi-nhat-2021.
 [jysk.vn]
 match = -164.3%%
 title = Ruột Chăn, Ruột Gối Ngủ Cao Cấp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/ruot-chan-goi?srsltid=AfmBOorVvApUFS1d2E_Y50FRUSXZv5J6p5HE3UL1xpWuoALBC-_xlvQ3
+url = https://jysk.vn/ruot-chan-goi
 
 [everonvn.com.vn]
 match = -164.3%%
 title = Bảng Giá Ruột Gối Đầu Everon Chính Hãng Hàn Quốc
-url = https://everonvn.com.vn/5/ruot-goi-everon?srsltid=AfmBOooRwZ5KDgHvkA6rKaySLi9daXyPR_Rs49tbM07Xopg07hIWozJQ
+url = https://everonvn.com.vn/5/ruot-goi-everon
 
 [demsonghonghanoi.com]
 match = -235.7%%
