--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-08-06 12:14:19
+lastsearch = 2024-08-06 12:48:04
 
 [demxanh.com]
-match = 18.2%%
-title = Thảm trải giường lông cừu TLC 02
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-02.html
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -32,8 +32,8 @@ title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [cafeland.vn]
-match = -109.1%%
-title = Kích thước giường ngủ chuẩn theo phong thủy - CafeLand.Vn
+match = -45.5%%
+title = Kích thước giường ngủ chuẩn theo phong thủy
 url = https://cafeland.vn/xu-huong/kich-thuoc-giuong-ngu-chuan-theo-phong-thuy-91091.html
 
 [www.diepxuan.com]
