--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-06 11:23:26
+lastsearch = 2024-08-06 12:45:22
 
 [demxanh.com]
-match = 18.2%%
-title = Thảm trải giường lông cừu TLC 04
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html
+match = -27.3%%
+title = Thảm trải giường lông cừu TLC 07 - Đệm Xanh
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
 
 [demre.com.vn]
 match = 18.2%%
-title = Thảm ghế thảm giường - Trang 7
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-asc&page=7
+title = Bộ thảm ghế gỗ 1 dài 2 ngắn
+url = https://demre.com.vn/bo-tham-ghe-go-1-dai-2-ngan-5
 
 [decoviet.vn]
-match = -50.0%%
-title = Thảm Lót Ghế Sofa | Thảm Phòng Khách Giá Rẻ
-url = https://decoviet.vn/tham-lot-ghe-sofa/
+match = 23.8%%
+title = Thảm Sofa Phòng Khách
+url = https://decoviet.vn/tham-phong-khach/
 
 [demolympia.com]
 match = -40.9%%
@@ -34,7 +34,7 @@ url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 [ru9.vn]
 match = -86.4%%
 title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOooW1QTrFO9Jfp79f3CjMBpf2VU-bow04HdkiFhqJ7qQAvTzysM0
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [flexhouse.vn]
 match = -90.9%%
@@ -42,9 +42,9 @@ title = Thảm trải sàn phòng khách trẻ trung năng động TBD2582
 url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 
 [www.diepxuan.com]
-match = 31.8%%
-title = Điệp Xuân Thảm giường nỉ 200x220
-url = https://www.diepxuan.com/tham-giuong-ni-200x220.html
+match = 50.0%%
+title = Điệp Xuân Thảm giường nỉ 150x190
+url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
 
 [www.lazada.vn]
 match = -77.3%%
