--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-06 06:57:50
+lastsearch = 2024-08-06 12:50:29
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = 5.9%%
-title = Michael Rosenfeld
-url = https://profiles.ucsd.edu/michael.rosenfeld
+match = -5.0%%
+title = Gary Vilke | UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -58,8 +58,8 @@ url = https://profiles.ucsf.edu/christopher.dvorak
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
-title = Exercise in patients with inflammatory bowel diseases
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
+title = Uncoupling Proteins: Role in Insulin Resistance and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3060851/
 
 [profiles.ucla.edu]
 match = 0.0%%
@@ -87,9 +87,9 @@ title = Electrical Transport Mechanisms of ITO/a-Si:H Schottky Diode
 url = https://uwaterloo.ca/giga-to-nanoelectronics-centre/sites/default/files/uploads/documents/annual_report_2002-2005.pdf
 
 [som.cuanschutz.edu]
-match = -145.0%%
-title = Kurt Stenmark, MD Professor, Pediatrics-Critical Care ...
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/15570
+match = -150.0%%
+title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -307,9 +307,9 @@ title = WE AIN'T CRAZY!
 url = https://www.ochealthinfo.com/sites/hca/files/import/data/files/25864.pdf
 
 [profiles.stanford.edu]
-match = -25.0%%
-title = Kevin Schulman - Stanford Profiles
-url = https://profiles.stanford.edu/kevin-schulman
+match = -30.0%%
+title = Ramsey Cheung - Stanford Profiles
+url = https://profiles.stanford.edu/ramsey-cheung
 
 [publichealth.lacounty.gov]
 match = -155.0%%
