--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-08-06 07:00:20
+lastsearch = 2024-08-06 12:44:43
 
 [gobearcats.com]
 match = -142.1%%
@@ -59,7 +59,7 @@ url = https://download.asic.gov.au/media/1314541/ASIC40A_08.pdf
 [www2.ed.gov]
 match = -126.3%%
 title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
+url = https://www2.ed.gov/programs/psp/2024/candidates.pdf
 
 [www.lumiere-education.com]
 match = 0.0%%
@@ -312,9 +312,9 @@ title = GW170104: Observation of a 50-solar-mass binary black ...
 url = https://www.ligo.org/detections/GW170104/paper/GW170104-Supplement.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = -84.2%%
-title = Vancomycin Resistance in Enterococcus and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9866002/
+match = -163.2%%
+title = A Comprehensive Review of Health Benefits of Qigong and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3085832/
 
 [www.ucdavis.edu]
 match = -52.6%%
