CI images update

--- a/images/chieu-nhua-ha-noi-140x190/config.ini
+++ b/images/chieu-nhua-ha-noi-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
 lastopen = 2024-08-03 06:31:32
 
 [search]
-lastsearch = 2024-08-06 07:58:56
+lastsearch = 2024-08-06 13:33:14
 
 [www.diepxuan.com]
 match = 48.0%%
 title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOoo3ZeXeu3Vg_z469YBCOdFvRWHGpNug_5ogTqYmnO-zcoKXQwHO
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 
 [www.facebook.com]
 match = 20.0%%
@@ -19,7 +19,7 @@ url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
 [demxanh.com]
 match = 16.0%%
 title = Chiếu Trúc Tăm Rồng kiểu 1 - Hà Nội
-url = https://demxanh.com/chieu-truc-tam-rong-kieu-1.html?srsltid=AfmBOoqcBVejNQ3t6A641_oM6DOqp931IwphL6GKL7Hxf2dGxP-0z_iN
+url = https://demxanh.com/chieu-truc-tam-rong-kieu-1.html
 
 [chieucoi.com.vn]
 match = -60.0%%
