--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-08-06 06:42:55
+lastsearch = 2024-08-06 13:21:57
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -345,4 +345,9 @@ url = https://thietthach.vn/
 match = -75.0%%
 title = Công ty nước sạch Hà Nội | Hanoi Water Limited Company
 url = http://www.hawacom.vn/
+
+[www.fosco.vn]
+match = -340.0%%
+title = FOSCO
+url = https://www.fosco.vn/
 
