--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-06 01:46:22
+lastsearch = 2024-08-06 13:30:12
 
 [us.misumi-ec.com]
 match = -325.0%%
@@ -287,9 +287,9 @@ title = Florida State University
 url = https://www.fsu.edu/
 
 [www.yelp.com]
-match = -91.7%%
-title = Pho Ga An Nam - San Jose, CA
-url = https://www.yelp.com/biz/pho-ga-an-nam-san-jose
+match = -100.0%%
+title = Con Ga Trong Restaurant Photos
+url = https://www.yelp.com/biz/con-ga-trong-restaurant-san-jose-2
 
 [www.fwe.com]
 match = -58.3%%
