--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-06 06:29:20
+lastsearch = 2024-08-06 13:29:51
 
 [dongagroup.vn]
 match = -272.7%%
@@ -27,9 +27,9 @@ title = Giuonggaphoaphat.com
 url = http://giuonggaphoaphat.com/
 
 [tunhuamiennam.com]
-match = -245.5%%
-title = giường liền tủ nhựa cứng ecoplast cao cấp gec31
-url = https://tunhuamiennam.com/san-pham/giuong-lien-tu-nhua-cung-ecoplast-cao-cap-gec30-2/
+match = -54.5%%
+title = giường nhựa đài loan gch64
+url = https://tunhuamiennam.com/san-pham/giuong-nhua-dai-loan-gn09tr/
 
 [giuongtang.mov.mn]
 match = -200.0%%
@@ -92,9 +92,9 @@ title = Giường 2mx2m2 hàng chính hãng, giao nhanh - Tiki
 url = https://tiki.vn/search?q=giường 2mx2m2
 
 [www.facebook.com]
-match = -200.0%%
-title = Có bán Ga giường tại Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/bed-sheets/?locale=vi_VN
+match = -318.2%%
+title = Giường & khung giường đơn tiêu chuẩn gần Eau Claire ...
+url = https://www.facebook.com/marketplace/103106229729097/full-size-beds/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
@@ -143,8 +143,8 @@ url = https://vexere.com/vi-VN/ve-xe-giuong-nam-doi-tu-sai-gon-di-dak-lak-129t11
 
 [bentreriverside.com]
 match = -81.8%%
-title = SUITE Hướng Phố 2 Giường Đơn
-url = https://bentreriverside.com/en/room/suite-huong-pho-2-giuong-don/
+title = SUITE Hướng Sông 2 Giường Đơn
+url = https://bentreriverside.com/en/room/suite-huong-song-2-giuong-don/
 
 [thegioigiuonggap.com]
 match = -72.7%%
