--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-06 10:15:43
+lastsearch = 2024-08-06 13:30:50
 
 [www.diepxuan.com]
 match = -31.2%%
 title = Túi Warmdream 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
+url = https://www.diepxuan.com/tui-warmdream-180x200x09.html?srsltid=AfmBOoo7MIkazLEvuIEUFAaul-HOiRdu2ue4aPXzP8ZxscHIS6okge-o
 
 [demxanh.com]
 match = -181.2%%
