--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-06 12:42:10
+lastsearch = 2024-08-06 13:26:05
 
 [shopee.vn]
-match = -8.0%%
-title = Màn chụp Tự Bung Đỉnh Vuông Cao Cấp Hoàng Nhân ...
-url = https://shopee.vn/Màn-chụp-Tự-Bung-Đỉnh-Vuông-Cao-Cấp-Hoàng-Nhân-Màn-Rộng-Dãi-Mắt-Nhỏ-Chống-Muỗi-II-BẢO-HÀNH-1-năm-i.397469085.9220637014
+match = 48.0%%
+title = Màn Chụp Tự Bung đỉnh vuông Mùng ...
+url = https://shopee.vn/Màn-Chụp-Tự-Bung-đỉnh-vuông-Mùng-Chụp-Đỉnh-Vuông-viền-trơn-cao-cấp-i.92196959.13058100091
 
 [munghoangphat.com]
 match = 48.0%%
@@ -49,7 +49,7 @@ url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 [www.lazada.vn]
 match = 4.0%%
 title = Màn đỉnh Vuông Tự Bung Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/?srsltid=AfmBOopU7QsRucN_e7tcMviLqkBhJ1Zr3qiRsSRughDyJ4tKdI4PfNye
+url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/
 
 [demxanh.com]
 match = 12.0%%
