--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-06 06:26:57
+lastsearch = 2024-08-06 13:26:26
 
 [www.everonvn.vn]
-match = 7.4%%
-title = ĐỆM LÒ XO EVERON, KING KOIL
-url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
+match = 31.1%%
+title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
 
 [demxanh.com]
 match = 29.8%%
@@ -42,14 +42,14 @@ title = Nệm Lò Xo Everon - Đà Nẵng
 url = https://suongtuyet.com/nem-lo-xo-everon
 
 [www.everonqb.com]
-match = 57.4%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
-url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
+match = 19.1%%
+title = Everon Quảng Bình Nệm lò xo Everon Pocket 180x200x25
+url = https://www.everonqb.com/nem-lo-xo-everon-pocket-180x200x25.html
 
 [www.diepxuan.com]
-match = 53.2%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
+match = 31.1%%
+title = Điệp Xuân Nệm lò xo Everon Bonnell 200x220x23
+url = https://www.diepxuan.com/nem-lo-xo-everon-bonnell-200x220x23.html
 
 [everon.online]
 match = 31.9%%
