--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-08-06 12:33:56
+lastsearch = 2024-08-06 13:18:53
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -715,4 +715,9 @@ url = https://www.usni.org/magazines/proceedings/1973/may/marine-corps-operation
 match = -86.4%%
 title = US Marines in Vietnam An Expanding War 1966 PCN ...
 url = https://www.marines.mil/Portals/1/Publications/US Marines in Vietnam An Expanding War 1966  PCN 19000308600_6.pdf
+
+[historyhub.history.gov]
+match = 0.0%%
+title = 
+url = https://historyhub.history.gov/military-records/navy-marine-corps-and-coast-guard-records/f/navy-marine-coast-guard-forum/15733/looking-for-marine-corps-pictures-of-myself-from-1969-to-1989
 
