CI images update

--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-05 22:32:15
+lastsearch = 2024-08-06 13:41:51
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -12,9 +12,9 @@ title = Bộ ga chun coco 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-chun-coco-180x200.html
 
 [shopee.vn]
-match = 13.6%%
-title = Bộ Ga Gối Bo Chun Trần Phi Lụa Coco
-url = https://shopee.vn/product/494447407/24864025138
+match = 45.5%%
+title = Bộ ga gối Coco đủ các size
+url = https://shopee.vn/Bộ-ga-gối-Coco-đủ-các-size-i.1081989754.18186157367
 
 [m.facebook.com]
 match = -18.2%%
@@ -27,9 +27,9 @@ title = Bộ ga chun My Youth - MY18
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [www.lazada.vn]
-match = -118.2%%
-title = Chăn ga gối Nỉ COCO hàng loại 1 siêu mềm mượt, chăn 4kg cực ...
-url = https://www.lazada.vn/products/chan-ga-goi-ni-coco-hang-loai-1-sieu-mem-muot-chan-4kg-cuc-am-mua-thu-dong-i2492985749-s12208197211.html?from_gmc=1&fl_tag=1
+match = -77.3%%
+title = Chiếu Điều Hòa Cao Su Non Bo Chun Chanel Coco phiên ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-bo-chun-chanel-coco-phien-ban-2023-i2300743328.html
 
 [www.instagram.com]
 match = -100.0%%
@@ -42,14 +42,14 @@ title = SET GA GỐI TRẦN BÔNG SƠ ĐẬU NÀNH BỌC CHUN 28CM
 url = https://h5.lazada.vn/products/set-ga-goi-tran-bong-so-dau-nanh-boc-chun-28cm-i2270667932-s10970367704.html
 
 [www.sendo.vn]
-match = -90.9%%
-title = Bộ Ga Gối Nỉ Nhung COCO in Nổi Hoạ Tiết Mẫu Mới 2023 Chất ...
-url = https://www.sendo.vn/bo-ga-goi-ni-nhung-coco-in-noi-hoa-tiet-mau-moi-2023-chat-lieu-day-dan-mem-min-am-ap-cao-cap-giu-nhiet-tot-116242919.html
+match = -72.7%%
+title = Bộ Ga Gối Cao Cấp Siêu Chất, Rẻ Nhất, Xu Hướng Mới Nhất
+url = https://www.sendo.vn/bo-ga-goi-cao-cap.htm
 
 [demxanh.com]
 match = -45.5%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 18
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-18.html
+title = Chiếu cao su non Coco bo chun màu xanh mint
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xanh-mint.html
 
 [www.tiktok.com]
 match = -109.1%%
@@ -67,9 +67,9 @@ title = Chăn ga gối cho nam và sự bất tử của họa tiết sọc kẻ
 url = https://songhonghanoi.vn/chan-ga-goi-cho-nam-va-su-bat-tu-cua-hoa-tiet-soc-ke.html
 
 [www.facebook.com]
-match = -140.9%%
-title = Chiếu điều hoà (chiếu mây), chiếu tre, chăn-ga-gối 🎀 | 🆕 COCO ...
-url = https://www.facebook.com/groups/151776543537474/posts/-coco-2024️-chiếu-bọc-chun-mới-nhất-của-coco-siêu-bắt-mắt-với-thiết-kế-mới-nhất️/775069884541467/
+match = -13.6%%
+title = Chăn ga gối đệm - CoCo HOUSE | Vinh Yen
+url = https://www.facebook.com/hoa32/
 
 [foreverbedding.net]
 match = -27.3%%
