--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-06 08:00:00
+lastsearch = 2024-08-06 13:45:01
 
 [burningman.org]
 match = 0.0%%
@@ -29,7 +29,7 @@ url = http://desaulnier.house.gov/
 [account.microsoft.com]
 match = -200.0%%
 title = Microsoft account | Sign In or Create Your Account Today
-url = https://account.microsoft.com/account
+url = https://account.microsoft.com/account/manage-my-account
 
 [www.regmovies.com]
 match = -113.3%%
@@ -905,4 +905,9 @@ url = https://www.kitetails.org/
 match = -246.7%%
 title = Phoenix's Leading Local News: Weather, Traffic, Sports and ...
 url = https://www.12news.com/
+
+[abc13.com]
+match = -253.3%%
+title = ABC13 Houston news, weather and traffic - Latest Texas news ...
+url = https://abc13.com/
 
