--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-08-06 13:22:18
+lastsearch = 2024-08-06 13:50:13
 
 [www.diepxuan.com]
 match = 27.3%%
@@ -13,13 +13,13 @@ url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
 match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+title = Thảm trải giường cao su non màu xanh ngọc
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-ngoc.html
 
 [www.lazada.vn]
-match = -113.6%%
-title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
-url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
+match = -13.6%%
+title = Thảm trải giường cao cấp 1m6x2m và 1m8x2m
+url = https://www.lazada.vn/products/tham-trai-giuong-cao-cap-1m6x2m-va-1m8x2m-i1537276656.html
 
 [www.sendo.vn]
 match = 4.5%%
@@ -107,9 +107,9 @@ title = Thảm giường massage cotton hữu cơ Maybedding
 url = https://maybedding.vn/products/tham-giuong-massage-cotton-huu-co-maybedding
 
 [dovihome.vn]
-match = -118.2%%
-title = Giường ngủ Decor có tựa đầu bọc nệm Sofa phong cách ...
-url = https://dovihome.vn/giuong-bay-ma-m30-giuong-ngu-decor-co-tua-dau-boc-nem-sofa-phong-cach-toi-gian
+match = -122.7%%
+title = Giường ngủ Decor có tựa đầu tối giản làm từ gỗ thông ...
+url = https://dovihome.vn/giuong-ma-dv10-giuong-ngu-decor-co-tua-dau-toi-gian-lam-tu-go-thong-nhap-khau
 
 [covacu.com]
 match = 28.6%%
