--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-05 16:52:59
+lastsearch = 2024-08-06 13:53:20
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [songhongonline.vn]
 match = 0.0%%
-title = Bộ sản phẩm SH_BC22 066
-url = https://songhongonline.vn/products/bo-san-pham-song-hong-sh-bc22-1
+title = Bộ sản phẩm SH_BC22 061
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-061
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = 23.5%%
-title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH02
-url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh02
+match = -10.5%%
+title = Bộ Chăn Ga Gối Eu08
+url = https://antbedding.com/bo-chan-ga-goi-eu08
 
 [shopee.vn]
 match = 50.0%%
@@ -67,9 +67,9 @@ title = Bộ Chăn Ga ES 1840
 url = https://tongdailyeveron.com.vn/products/bo-chan-ga-es1840
 
 [songhong.info]
-match = 2.9%%
-title = Dòng chăn ga gối Sông Hồng Basic mã mầu BC-04
-url = https://songhong.info/chan-ga-goi-bc-04
+match = -5.9%%
+title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22062
+url = https://songhong.info/chan-ga-goi-khong-chan-bc62
 
 [kona.com.vn]
 match = 41.2%%
@@ -84,7 +84,7 @@ url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
 [aeoneshop.com]
 match = 52.9%%
 title = Bộ Ga Chun Chần Bốn Mùa Everon 180x200cm ESB23022
-url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180x200cm-esb23022
+url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180x200cm-esb23022?srsltid=AfmBOorx38HYfuEyCEUv6snz4VpQeecwcWpOht46znERxvFj8gGPTOI7
 
 [tiki.vn]
 match = 41.2%%
@@ -112,9 +112,9 @@ title = Ga gối Sông Hồng basic TC BC24107
 url = https://changagoidemsonghong.online/ga-goi-song-hong-basic-bc24107.html
 
 [everonvn.com.vn]
-match = -4.2%%
-title = Bộ Everon Ep1822 - Sheep
-url = https://everonvn.com.vn/everon/623/bo-everon-ep1822
+match = -23.5%%
+title = Bảng giá bộ chăn ga gối Everon Ep1523 Hàn Quốc màu hoa ...
+url = https://everonvn.com.vn/everon/273/everon-ep-1523?srsltid=AfmBOop5AawYwLnWWys4HgGuTfOeg1wlukNHmMi3nDFINpzUloi0OEB1
 
 [staging.happynest.com.vn]
 match = -8.8%%
