--- a/images/chieu-nhua-ha-noi-160x200/config.ini
+++ b/images/chieu-nhua-ha-noi-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 lastopen = 2024-08-01 09:09:09
 
 [search]
-lastsearch = 2024-08-06 12:30:49
+lastsearch = 2024-08-06 13:40:05
 
 [demre.com.vn]
 match = 76.0%%
@@ -34,12 +34,12 @@ url = https://www.lazada.vn/tag/chieu-nhua-gap-doi/?page=2
 [www.diepxuan.com]
 match = 20.0%%
 title = Chiếu nhựa Hà Nội du lịch 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html?srsltid=AfmBOopsiSdcadLmMbqqAZ0lcZws02ebWdXhI504QNyNBqhNcfepwuHU
 
 [demxanh.com]
 match = -28.0%%
 title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html?srsltid=AfmBOoqsil1HWnKffjQNf8oMkz1ewYX9OOanMKMOwoL4Oe7N6Vcaoj3r
 
 [shopee.vn]
 match = 36.0%%
