--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-08-06 12:23:37
+lastsearch = 2024-08-06 13:48:47
 
 [shopee.vn]
 match = -214.3%%
@@ -27,9 +27,9 @@ title = MÀN NGỦ CAO CẤP CHO GIA ĐÌNH & KHÁCH SẠN – MÀN ...
 url = https://manthutrang.com/
 
 [www.mantubung.com]
-match = -228.6%%
-title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
-url = https://www.mantubung.com/
+match = -150.0%%
+title = Mùng Chụp Tự Bung Người Lớn chống muỗi BẢO BẢO
+url = https://www.mantubung.com/mung-chup-tu-bung.html
 
 [www.lazada.vn]
 match = -242.9%%
@@ -107,9 +107,9 @@ title = Holy Bible (Mizo) | Johana 3:15-18
 url = https://www.facebook.com/groups/MizoHolyBible/posts/johana-315-18tupawh-a-ring-apiangin-amah-avanga-chatuana-nunna-an-neihna-turin-p/4674411329291742/
 
 [www.churchofjesuschrist.org]
-match = -35.7%%
-title = Doktrin na ol Kavanen 89
-url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/89?lang=tpi
+match = -28.6%%
+title = Doktrin na ol Kavanen 78
+url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
 
 [sieuthinguyenkim.com]
 match = -128.6%%
