--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-06 10:06:17
+lastsearch = 2024-08-06 13:40:26
 
 [www.lazada.vn]
 match = -94.4%%
@@ -22,9 +22,9 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [thegioinem.com]
-match = -116.7%%
-title = Top 5 nệm mỏng gấp gọn bán chạy nhất Thế Giới Nệm
-url = https://thegioinem.com/top-5-nem-mong-gap-gon-ban-chay-nhat-the-gioi-nem.html
+match = -122.2%%
+title = Nệm Vạn Thành 5cm, 10cm, 15cm, 20cm giá bao nhiêu?
+url = https://thegioinem.com/nem-van-thanh-5cm--10cm-15cm--20cm.html
 
 [cotienfoods.vn]
 match = -72.2%%
@@ -87,9 +87,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -77.8%%
-title = How Long to Cook Nem Nuong in Air Fryer
-url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
+match = -138.9%%
+title = Buffet nem nướng 39k và nước mía khổng lồ 15k full ...
+url = https://www.tiktok.com/@50motbua/video/7367416773156539664
 
 [vi.wikipedia.org]
 match = -27.8%%
