--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-06 12:30:30
+lastsearch = 2024-08-06 13:44:41
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -12,13 +12,13 @@ title = Điệp Xuân Thảm giường nỉ 180x200
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = 18.2%%
-title = Thảm trải giường lông cừu TLC 02
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-02.html
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [www.lazada.vn]
-match = -113.6%%
-title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
+match = -68.2%%
+title = Ga chống thấm trải giường cotton 2 lớp loại tốt ...
 url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
 
 [noithatlongthai.com]
@@ -27,8 +27,8 @@ title = Giường MDF 1.8x2m có 2 ngăn kéo
 url = https://noithatlongthai.com/giuong-mdf-1-8x2m-co-2-ngan-keo/
 
 [shopee.vn]
-match = -45.5%%
-title = thảm trải giường giá tốt Tháng 8, 2024 | Mua ngay
+match = -36.4%%
+title = thảm trải giường giá tốt Tháng 8, 2024 - Shopee
 url = https://shopee.vn/search?keyword=thảm trải giường
 
 [noithatthuynguyet.com]
@@ -67,8 +67,8 @@ title = Mattress 180x200 GOLD S95 DREAMZONE - JYSK
 url = https://jysk.vn/en-US/spring-mattress-dreamzone-s95-r180xd200xc28cm
 
 [decosy.com]
-match = 4.5%%
-title = Furniture & Decoration
+match = -50.0%%
+title = Furniture & Decoration - Decosy Vietnam
 url = https://decosy.com/vi_VN/shop/category/phong-ngu-giuong-1167
 
 [vn.my-best.com]
