--- a/images/vo-goi-ke-warmdream-45x65-hq/config.ini
+++ b/images/vo-goi-ke-warmdream-45x65-hq/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
 lastopen = 2024-07-01 10:42:00
 
 [search]
-lastsearch = 2024-08-06 12:46:44
+lastsearch = 2024-08-06 13:48:08
 
 [www.diepxuan.com]
 match = 28.6%%
 title = Điệp Xuân Vỏ gối kê màu 45x65
-url = https://www.diepxuan.com/vo-goi-ke-mau-45x65.html?srsltid=AfmBOopEkfh0YSDHysuXfcwNhG8BkDgaZr4qL_YxTp1OELhZamqnCpeW
+url = https://www.diepxuan.com/vo-goi-ke-mau-45x65.html
 
 [www.head-fi.org]
 match = 8.0%%
