--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-08-06 04:18:59
+lastsearch = 2024-08-06 13:52:18
 
 [www.lazada.vn]
-match = -46.7%%
-title = Vỏ Gối Vuông 60x60 Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/vo-goi-vuong-60x60/
+match = -193.3%%
+title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
+url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html
 
 [shopee.vn]
 match = 13.3%%
