CI images update

--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -297,9 +297,9 @@ title = The Reinstatement of Covenants, Conditions, and ...
 url = https://www.floridabar.org/the-florida-bar-journal/the-reinstatement-of-covenants-conditions-and-restrictions-extinguished-by-the-marketable-record-title-act/
 
 [books.google.com]
-match = -194.1%%
-title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+14&source=bl&ots=rUQ6ExGF9-&sig=ACfU3U2BpqGfr77a0iY8-f76wFdirR095g&hl=en&sa=X&ved=2ahUKEwi85O7h9t6HAxUEkYkEHWXDJg0Q6AF6BAgpEAM
+match = -100.0%%
+title = Geographisch woordenboek der geheele aarde
+url = https://books.google.com/books?id=mfpUAAAAcAAJ&pg=PA859&lpg=PA859&dq=man+in+hoa+dep+14&source=bl&ots=V7YHlp_qVb&sig=ACfU3U2OtV1gFVQHoScD1_nAZBLZ9ilVBw&hl=en&sa=X&ved=2ahUKEwjqxObS5d-HAxV_F2IAHSBeEm8Q6AF6BAgpEAM
 
 [www.house.gov]
 match = 11.8%%
