--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-06 09:58:23
+lastsearch = 2024-08-06 13:50:42
 
 [www.reddit.com]
-match = -104.3%%
-title = Riot is cutting back budget on esports? : r/leagueoflegends
-url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
+match = -82.6%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
 match = -58.3%%
@@ -267,9 +267,9 @@ title = South Korean Police Arrest 70 in 'Crypto-powered Drugs ...
 url = https://cryptonews.com/news/south-korean-police-arrest-70-in-raid-on-crypto-powered-drug-dealers.htm
 
 [www.koreanwar2.org]
-match = -30.4%%
-title = NOVEMBER 1951 - 5TH MARINE REGIMENT
-url = https://www.koreanwar2.org/kwp2/usmc/080/M080_CD22_1951_11_2193.pdf
+match = -26.1%%
+title = OCTOBER 1952 - 1ST MARINE DIVISION
+url = https://www.koreanwar2.org/kwp2/usmc/001_2/m001_cd24_1952_10_2632.pdf
 
 [variety.com]
 match = -100.0%%
@@ -282,9 +282,9 @@ title = Introduction
 url = https://www.degruyter.com/document/doi/10.1515/9780824887964-013/pdf?licenseType=restricted
 
 [en.yna.co.kr]
-match = -113.0%%
-title = Heads of S. Korea's top-10 biz groups received 540.5 bln ...
-url = https://en.yna.co.kr/view/AEN20180218002800320
+match = -82.6%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [lol.fandom.com]
 match = 0.0%%
