--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-06 12:34:40
+lastsearch = 2024-08-06 13:58:20
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -562,9 +562,9 @@ title = Khắc ghi những lời dạy của Tổng Bí thư Nguyễn Phú Trọ
 url = https://congan.binhphuoc.gov.vn/tin-bo-cong-an/khac-ghi-nhung-loi-day-cua-tong-bi-thu-nguyen-phu-trong-trong-cong-tac-xay-dung-luc-luong-cand-331094
 
 [giaoducthoidai.vn]
-match = -131.2%%
-title = Cảnh giác với 3 chiêu lừa đảo trực tuyến tuần qua
-url = https://giaoducthoidai.vn/canh-giac-voi-3-chieu-lua-dao-truc-tuyen-tuan-qua-post694367.html
+match = -68.8%%
+title = F-16 không thể đối đầu với Su-35S
+url = https://giaoducthoidai.vn/f-16-khong-the-doi-dau-voi-su-35s-post694514.html
 
 [moitruong.net.vn]
 match = -162.5%%
