--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-06 12:15:23
+lastsearch = 2024-08-06 14:00:06
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -187,9 +187,9 @@ title = 974 người theo dõi trên Pinterest - Petal Designs
 url = https://petaldesigns.co.za/ảnh-cặc-to-anime.html
 
 [m.facebook.com]
-match = -156.2%%
-title = TRỰC TIẾP TỨ KẾT: DƯƠNG HÒA SPORT - U18 BẠC LIÊU ...
-url = https://m.facebook.com/bongdaphuihoian/videos/-trực-tiếp-tứ-kết-dương-hòa-sport-u18-bạc-liêu/2028143954255355/
+match = -25.0%%
+title = Hà Nội Riviu - Riviu.vn
+url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1472305546766510/
 
 [baomoi.com]
 match = -193.8%%
