--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-06 11:25:52
+lastsearch = 2024-08-06 14:02:49
 
 [bedding.vn]
 match = -123.1%%
@@ -37,9 +37,9 @@ title = Chun Lu
 url = https://scholar.google.co.uk/citations?user=ufM1QgQAAAAJ&hl=th
 
 [www.linkedin.com]
-match = -230.8%%
-title = Joanne Chun - University of California, San Francisco
-url = https://www.linkedin.com/in/joanne-k-chun
+match = -7.7%%
+title = David Cohn - Subtext
+url = https://www.linkedin.com/in/davidjcohn
 
 [hanvico.com.vn]
 match = -69.2%%
@@ -107,9 +107,9 @@ title = Ga chun - Chăn ga gối đệm Phương Bắc
 url = https://changagoidemphuongbac.com/ga-chun/
 
 [profiles.ucsd.edu]
-match = -50.0%%
-title = Bing Ren
-url = https://profiles.ucsd.edu/bing.ren
+match = -69.2%%
+title = Karen Messer | UCSD Profiles
+url = https://profiles.ucsd.edu/karen.messer
 
 [www.mtech.edu]
 match = -61.5%%
@@ -117,9 +117,9 @@ title = jack l. skinner, ph.d., pe
 url = https://www.mtech.edu/mechanical-engineering/faculty/jack-skinner/docs/cv-jack-skinner.pdf
 
 [researchdirectory.uc.edu]
-match = -315.4%%
-title = Fawen Zhang - UC Research Directory - University of Cincinnati
-url = https://researchdirectory.uc.edu/p/zhangfe
+match = -246.2%%
+title = Expert Profile: James Herman - UC Research Directory
+url = https://researchdirectory.uc.edu/p/hermanjs
 
 [thegioinem.com]
 match = -230.8%%
@@ -157,8 +157,8 @@ title =
 url = https://www.healio.com/news/hematology-oncology/20230724/a-literal-cancer-moonshot-researchers-test-oncology-drugs-in-space
 
 [uclaclubsports.com]
-match = -130.8%%
-title = 2023-2024 Women's Lacrosse Schedule
+match = -161.5%%
+title = 2023-2024 Women's Lacrosse Schedule (D1)
 url = https://uclaclubsports.com/sports/womens-lacrosse/schedule/2023-2024
 
 [everonvn.com.vn]
@@ -420,4 +420,14 @@ url = https://caps.byu.edu/current-and-former-interns
 match = -69.2%%
 title = Administration and Faculty
 url = https://ecatalog.nccu.edu/content.php?catoid=16&navoid=1528
+
+[www.ncbi.nlm.nih.gov]
+match = -169.2%%
+title = Transcriptome-wide association studies ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10895848/
+
+[symposium2024.icsa.org]
+match = -92.3%%
+title = Applied Statistics Symposium
+url = https://symposium2024.icsa.org/wp-content/uploads/2024/06/ICSA2024PB2_0.pdf
 
