--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-06 13:29:51
+lastsearch = 2024-08-06 14:03:50
 
 [dongagroup.vn]
 match = -272.7%%
@@ -27,9 +27,9 @@ title = Giuonggaphoaphat.com
 url = http://giuonggaphoaphat.com/
 
 [tunhuamiennam.com]
-match = -54.5%%
-title = giường nhựa đài loan gch64
-url = https://tunhuamiennam.com/san-pham/giuong-nhua-dai-loan-gn09tr/
+match = -172.7%%
+title = giường nhựa cứng ecoplast cao cấp gec60
+url = https://tunhuamiennam.com/san-pham/giuong-nhua-cung-ecoplast-cao-cap-gec60-2/
 
 [giuongtang.mov.mn]
 match = -200.0%%
