--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-06 13:26:26
+lastsearch = 2024-08-06 14:00:27
 
 [www.everonvn.vn]
 match = 31.1%%
@@ -14,7 +14,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
 [demxanh.com]
 match = 29.8%%
 title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
-url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
+url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html?srsltid=AfmBOorwJidOeaWK20_NSFZCGq-DUlTLL1F4UI95fDHZD-6kwG47MYkk
 
 [nemragoi.com]
 match = 37.9%%
@@ -22,14 +22,14 @@ title = Nệm lò xo Kingkoil Cloud Firm
 url = https://nemragoi.com/nem-lo-xo-kingkoil-cloud-firm.html
 
 [everonkorea.com]
-match = 23.4%%
-title = Đệm lò xo Kingkoil Cloud Firm cao 27cm - Everon Korea
-url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-firm/
+match = 31.8%%
+title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm
+url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 
 [everon.com.vn]
 match = 23.4%%
 title = ĐỆM LÒ XO KINGKOIL (MỸ) Showroom Chăn Ga Gối đệm ...
-url = https://everon.com.vn/kingkoil/
+url = https://everon.com.vn/kingkoil/?srsltid=AfmBOooRaOLoblOf72BY1oqBqhB5wysQjBe4cJ5i_AGzU9LZhS4NoFyH
 
 [sieuthidemhanquoc.com.vn]
 match = 33.3%%
@@ -42,14 +42,14 @@ title = Nệm Lò Xo Everon - Đà Nẵng
 url = https://suongtuyet.com/nem-lo-xo-everon
 
 [www.everonqb.com]
-match = 19.1%%
-title = Everon Quảng Bình Nệm lò xo Everon Pocket 180x200x25
-url = https://www.everonqb.com/nem-lo-xo-everon-pocket-180x200x25.html
+match = 57.4%%
+title = Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27
+url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
 
 [www.diepxuan.com]
-match = 31.1%%
-title = Điệp Xuân Nệm lò xo Everon Bonnell 200x220x23
-url = https://www.diepxuan.com/nem-lo-xo-everon-bonnell-200x220x23.html
+match = 55.3%%
+title = Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27 - Điệp Xuân
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html?srsltid=AfmBOor3q_Hxql8VwlQg_JVPXQhopagLifwTvr-V3k0N0XVKySmlYEcQ
 
 [everon.online]
 match = 31.9%%
@@ -72,9 +72,9 @@ title = kingkoil spray cushion (america) - Korean Pillows & Blankets
 url = https://everonvietnam.com/en/dem-lo-xo-kingkoil-my/
 
 [everonhanquoc.vn]
-match = 19.1%%
-title = Đệm Lò Xo Kingkoil Cloud Pillow Top - Sự Nâng Đỡ Tối Đa
-url = https://everonhanquoc.vn/everon/12714/dem-lo-xo-everon-kingkoil-cloud-pillow-top
+match = -48.0%%
+title = Các Loại Đệm Lò Xo Everon
+url = https://everonhanquoc.vn/1030/dem-lo-xo-everon
 
 [everonchinhhang.vn]
 match = 26.3%%
