--- a/images/ruot-goi-ke-long-vu/config.ini
+++ b/images/ruot-goi-ke-long-vu/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-long-vu.html
 lastopen = 2024-06-09 23:56:32
 
 [search]
-lastsearch = 2024-08-06 11:49:55
+lastsearch = 2024-08-06 13:54:08
 
 [hanvico.net.vn]
 match = -10.5%%
@@ -54,7 +54,7 @@ url = https://aoiconcept.com/products/ruot-goi-nam-cao-cap-a-oi-concept-50x70cm-
 [jysk.vn]
 match = 31.6%%
 title = Ruột gối lông vũ - JYSK.vn
-url = https://jysk.vn/ruot-goi-long-vu?srsltid=AfmBOopU1uNLTTlkGwWuzTxWToX1WDbsre1oOp9tLCQnM5GGLoqrV-vy
+url = https://jysk.vn/ruot-goi-long-vu
 
 [shopee.vn]
 match = -110.5%%
