--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-06 12:58:58
+lastsearch = 2024-08-06 13:49:42
 
 [en.wikipedia.org]
-match = 21.7%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = -31.2%%
+title = Gwangju Uprising
+url = https://en.wikipedia.org/wiki/Gwangju_Uprising
 
 [www.britannica.com]
 match = 0.0%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/1/19/north-korea-touts-underwater-nucl
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=0e526ec8824269be&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjxmMLq19-HAxVHD1kFHbQVAG4QsZYEegQITxAC
+url = https://www.google.com/search?sca_esv=0e526ec8824269be&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwj-mZaW49-HAxXTF2IAHaJbCWYQsZYEegQIUhAC
 
 [produccionesitaca.es]
 match = -21.4%%
