--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-08-06 01:42:51
+lastsearch = 2024-08-06 14:03:10
 
 [tuananh.vn]
-match = 22.2%%
-title = Đệm Korea Gấm Plus
-url = https://tuananh.vn/dem-korea-gam-plus-p223.html
+match = 20.8%%
+title = Đệm Bông ép 2 mảnh Korea
+url = https://tuananh.vn/dem-bong-ep-2-manh-korea--p133.html
 
 [demxanh.com]
 match = -28.0%%
