CI images update

--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-08-06 11:47:49
+lastsearch = 2024-08-06 14:14:02
 
 [thegioidemviet.vn]
-match = 21.4%%
-title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
-url = https://thegioidemviet.vn/chieu-truc/
+match = 35.7%%
+title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
+url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
 match = 25.0%%
@@ -27,9 +27,9 @@ title = CHIẾU TRÚC QUẾ LÂM MẮT NGỌC KHÔNG HOA VĂN ...
 url = https://shopee.vn/CHIẾU-TRÚC-QUẾ-LÂM-MẮT-NGỌC-KHÔNG-HOA-VĂN-HÀNG-LOẠI-1-BÓNG-ĐẸP-i.444652147.14296554126
 
 [demxanh.com]
-match = -25.0%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -7.1%%
+title = Chiếu trúc hạt Quế Lâm hạt vàng 100x190cm hàng loại 1
+url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
 
 [tiki.vn]
 match = -39.3%%
@@ -110,4 +110,9 @@ url = https://daa.uit.edu.vn/sites/daa/files/202310/809-qd-dhqg_3-7-2023_quy_din
 match = -82.1%%
 title = Vai tro cua ddu ta true tiep nudc ngoai doi v6i chuyen djch co ...
 url = https://vjol.info.vn/index.php/econst/article/download/29179/24890/
+
+[www.chotot.com]
+match = 0.0%%
+title = Chiếu Trúc vàng Quế Lâm, chiếu trúc nâu-giải nhiệt
+url = https://www.chotot.com/mua-ban-giuong-chan-ga-goi-nem-quan-lien-chieu-da-nang/106110397.htm
 
