--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-08-06 13:18:53
+lastsearch = 2024-08-06 14:23:24
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -82,9 +82,9 @@ title = Sheet1
 url = https://sbg.colorado.gov/sites/sbg/files/documents/All_State_Liquor_Licenses_February_2024Protected.xlsx
 
 [www.quora.com]
-match = -95.5%%
-title = What are some states that are better than California?
-url = https://www.quora.com/What-are-some-states-that-are-better-than-California
+match = 0.0%%
+title = 
+url = https://www.quora.com/How-many-tours-of-duty-did-a-marine-do-in-Vietnam
 
 [archives.sandiegoreader.com]
 match = -95.5%%
