--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-06 12:47:24
+lastsearch = 2024-08-06 14:18:30
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -84,7 +84,7 @@ url = https://shopee.vn/search?keyword=bộ chăn ga gối sông hồng doremon 
 [demxanh.com]
 match = -8.3%%
 title = Bộ chăn ga gối lụa tơ tằm cao cấp King luxury 16
-url = https://demxanh.com/bo-chan-ga-goi-lua-to-tam-cao-cap-king-luxury-16.html?srsltid=AfmBOorGHNFzuIZY1H7jlee-ZzI9v9ij6yxcxnER8u-X4VsSJiFKSC4k
+url = https://demxanh.com/bo-chan-ga-goi-lua-to-tam-cao-cap-king-luxury-16.html
 
 [changagoibenlinda.com]
 match = -12.5%%
