--- a/images/bo-ga-chun-chan-lua-warmdream-180x200-hq/config.ini
+++ b/images/bo-ga-chun-chan-lua-warmdream-180x200-hq/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-lua-warmdream-180x200-hq.html
 lastopen = 2024-06-10 01:18:52
 
 [search]
-lastsearch = 2024-08-06 13:55:06
+lastsearch = 2024-08-06 14:25:46
 
 [www.diepxuan.com]
 match = 45.0%%
 title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html?srsltid=AfmBOooE6eMUUVlnlF1y_sf4BkvHQGOjHlvSDGxpBTQsc-4174ip9xpN
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
 
 [www.amazon.com]
 match = 10.0%%
