--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-06 13:20:53
+lastsearch = 2024-08-06 14:24:24
 
 [tiki.vn]
 match = -138.9%%
@@ -52,9 +52,9 @@ title = Bộ Chăn Ga Gối Làm Mát Gấu Hóme Cóordy SS24 ...
 url = https://aeoneshop.com/product/29675/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xam
 
 [everonvn.com.vn]
-match = 16.7%%
-title = Bộ Everon Epm-19061
-url = https://everonvn.com.vn/everon/752/bo-everon-epm19061
+match = -105.6%%
+title = Bộ Everon Esm-20011 - chăn ga gối đệm Everon
+url = https://everonvn.com.vn/everon/809/bo-everon-esm-20011
 
 [www.everonvni.vn]
 match = -77.8%%
@@ -102,8 +102,8 @@ title = Bộ Drap & Vỏ Chăn Cotton 160x200 (5 Món)...
 url = https://leflair.com/en/shop/delete-bo-drap-vo-chan-cotton-160x200-5-mon-3285
 
 [ninhouse.vn]
-match = -161.1%%
-title = [DRAP LỤA NỆM] Chăn ga gối đệm NIN Tencel TC800 mát ...
+match = -138.9%%
+title = [DRAP LỤA NỆM] Chăn ga gối đệm NIN Tencel TC800 ...
 url = https://ninhouse.vn/collections/nin-tencel-800
 
 [elmichsleep.vn]
