--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-06 06:39:39
+lastsearch = 2024-08-06 14:28:34
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,14 +27,14 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -200.0%%
-title = Gấm Lụa Cho Đời, Má Em Dặn Anh | Lofi Chữa Lành || Nhạc ...
-url = https://www.youtube.com/watch?v=x0H7MIQE4cM
+match = -181.2%%
+title = Gấm Lựa Cho Đời Remix ~ Tổng Hợp Nhạc Remix G5r 2024 ...
+url = https://www.youtube.com/watch?v=yFC_gf0mYnk
 
 [tuyensinh247.com]
-match = -225.0%%
-title = Một con lắc đơn có chiều dài dây treo l = 90 cm, khối lượng ...
-url = https://tuyensinh247.com/bai-tap-18187.html
+match = -218.8%%
+title = Con lắc lò xo có vật nặng khối lượng m = 100g, chiều dài ...
+url = https://tuyensinh247.com/bai-tap-62416.html
 
 [asisov.org.vn]
 match = -125.0%%
@@ -42,9 +42,9 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = 31.2%%
-title = Chiếu lác màu xuất khấu
-url = https://shopee.vn/Chiếu-lác-màu-xuất-khấu-i.275355238.5749616844
+match = -43.8%%
+title = Chiếu lác màu xuất khẩu bao dày đẹp
+url = https://shopee.vn/Chiếu-lác-màu-xuất-khẩu-bao-dày-đẹp-i.821808889.16482308101
 
 [www.thegioididong.com]
 match = -193.8%%
