--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-06 11:29:21
+lastsearch = 2024-08-06 14:29:57
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -57,9 +57,9 @@ title = Scholarly articles for chieu lac soc 16
 url = https://scholar.google.com/scholar?q=chieu+lac+soc+16&hl=en&as_sdt=0&as_vis=1&oi=scholart
 
 [moveek.com]
-match = -200.0%%
-title = Rạp Galaxy Kinh Dương Vương - Lịch chiếu, Giá vé, Ưu đãi
-url = https://moveek.com/rap/galaxy-kinh-duong-vuong/
+match = -162.5%%
+title = Rạp CGV Aeon Bình Tân - Lịch chiếu, Giá vé, Ưu đãi
+url = https://moveek.com/rap/cgv-aeon-mall-binh-tan/
 
 [baolongan.vn]
 match = -125.0%%
