--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-06 14:00:27
+lastsearch = 2024-08-06 14:19:53
 
 [www.everonvn.vn]
-match = 31.1%%
-title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
+match = 7.4%%
+title = ĐỆM LÒ XO EVERON, KING KOIL
+url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 
 [demxanh.com]
 match = 29.8%%
 title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
-url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html?srsltid=AfmBOorwJidOeaWK20_NSFZCGq-DUlTLL1F4UI95fDHZD-6kwG47MYkk
+url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -22,9 +22,9 @@ title = Nệm lò xo Kingkoil Cloud Firm
 url = https://nemragoi.com/nem-lo-xo-kingkoil-cloud-firm.html
 
 [everonkorea.com]
-match = 31.8%%
-title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm
-url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
+match = 23.4%%
+title = Đệm lò xo Kingkoil Cloud Firm cao 27cm - Everon Korea
+url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-firm/
 
 [everon.com.vn]
 match = 23.4%%
@@ -43,13 +43,13 @@ url = https://suongtuyet.com/nem-lo-xo-everon
 
 [www.everonqb.com]
 match = 57.4%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27
-url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
+title = Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
+url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.diepxuan.com]
-match = 55.3%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html?srsltid=AfmBOor3q_Hxql8VwlQg_JVPXQhopagLifwTvr-V3k0N0XVKySmlYEcQ
+match = 53.2%%
+title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27 - Điệp Xuân
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
 
 [everon.online]
 match = 31.9%%
