--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-06 13:49:42
+lastsearch = 2024-08-06 14:24:45
 
 [en.wikipedia.org]
 match = -31.2%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/1/19/north-korea-touts-underwater-nucl
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=0e526ec8824269be&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwj-mZaW49-HAxXTF2IAHaJbCWYQsZYEegQIUhAC
+url = https://www.google.com/search?sca_esv=0e526ec8824269be&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjctuOA69-HAxVlEFkFHfDAO24QsZYEegQIVBAC
 
 [produccionesitaca.es]
 match = -21.4%%
