--- a/images/tham-giuong-bode-150x190/config.ini
+++ b/images/tham-giuong-bode-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bode-150x190.html
 lastopen = 2024-06-17 17:46:25
 
 [search]
-lastsearch = 2024-08-06 12:15:03
+lastsearch = 2024-08-06 14:19:11
 
 [www.diepxuan.com]
-match = 29.2%%
-title = Thảm giường nỉ 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
+match = 20.8%%
+title = Thảm giường nỉ 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-160x200.html?srsltid=AfmBOoqhx7DrYO02YR1zBq4IB6kf15KmNxK6KfimFtJI61cahlOIdxlx
 
 [www.tripadvisor.com]
 match = -112.5%%
