--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-08-06 10:45:19
+lastsearch = 2024-08-06 14:17:51
 
 [www.tui.co.uk]
-match = -120.0%%
-title = City Breaks and Short Breaks 2024 / 2025
-url = https://www.tui.co.uk/holidays/city-breaks
+match = -7.7%%
+title = Flight Status
+url = https://www.tui.co.uk/flight/arrivals-and-departures
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Marella Cruises in Asia, sailing from Singapore
 url = https://www.southamptoncruisecentre.com/latest-news/marella-cruises-to-asia-with-dreamliner-to-singapore/
 
 [www.tuigroup.com]
-match = -26.7%%
-title = Reports & Presentations
-url = https://www.tuigroup.com/en-en/investors/reports-and-presentations
+match = -233.3%%
+title = World's leading tourism business TUI Group set to grow in ...
+url = https://www.tuigroup.com/en-en/media/press-releases/2015/20151125-worlds-leading-tourism-business-tui-group-set-to-grow-in-south-east-asia
 
 [www.seascanner.com]
 match = -140.0%%
