--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-08-06 13:46:43
+lastsearch = 2024-08-06 14:19:32
 
 [www.lazada.vn]
 match = -27.8%%
@@ -14,7 +14,7 @@ url = https://www.lazada.vn/tag/vo-goi-50x70-trang/
 [ru9.vn]
 match = -38.9%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOoobRwdjuL8mXYNKElHt95Zff1wloqNDTKRuIKFJlOK1TNMu8aCZ
 
 [www.diepxuan.com]
 match = -55.6%%
@@ -49,7 +49,7 @@ url = {search_url}
 [ninhouse.vn]
 match = 43.8%%
 title = Vỏ gối khách sạn
-url = https://ninhouse.vn/products/vo-goi-khach-san
+url = https://ninhouse.vn/products/vo-goi-khach-san?srsltid=AfmBOoqXJfVEWjng4GRft_-V2zdshKmKCY4cee73UEO0HhhW568lNO8u
 
 [tonybed.vn]
 match = 22.2%%
@@ -89,7 +89,7 @@ url = https://thegioidemviet.vn/vo-goi-khach-san/
 [demxanh.com]
 match = -155.6%%
 title = Chuyên các sản phẩm vỏ gối chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/vo-goi.html
+url = https://demxanh.com/vo-goi.html?srsltid=AfmBOooYPe_ODBlYrS-6zBvjVQA__IsWy1qTY1uWohK-2B_fj9dOE21E
 
 [templeshalom.ca]
 match = 0.0%%
