CI images update

--- a/images/chieu-nhua-ha-noi-160x200/config.ini
+++ b/images/chieu-nhua-ha-noi-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 lastopen = 2024-08-01 09:09:09
 
 [search]
-lastsearch = 2024-08-06 13:40:05
+lastsearch = 2024-08-06 14:31:41
 
 [demre.com.vn]
-match = 76.0%%
-title = Chiếu nhựa cao cấp 180x200
-url = https://demre.com.vn/chieu-nhua-cao-cap-180x200
+match = 61.1%%
+title = Chiếu nhựa 160x200
+url = https://demre.com.vn/chieu-nhua-160x200
 
 [www.facebook.com]
 match = 42.1%%
@@ -34,12 +34,12 @@ url = https://www.lazada.vn/tag/chieu-nhua-gap-doi/?page=2
 [www.diepxuan.com]
 match = 20.0%%
 title = Chiếu nhựa Hà Nội du lịch 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html?srsltid=AfmBOopsiSdcadLmMbqqAZ0lcZws02ebWdXhI504QNyNBqhNcfepwuHU
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html
 
 [demxanh.com]
-match = -28.0%%
-title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html?srsltid=AfmBOoqsil1HWnKffjQNf8oMkz1ewYX9OOanMKMOwoL4Oe7N6Vcaoj3r
+match = -12.0%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
 match = 36.0%%
@@ -70,4 +70,9 @@ url = https://sieuthitretho.vn/chieu-truc-hat-thai-binh-cao-cap-160x200-p498.htm
 match = -88.0%%
 title = Đệm lò xo Appolo A201 2 Viền (Mẫu 2) - Forever Bedding
 url = https://foreverbedding.net/dem-lo-xo-appolo-a201-2-vien-mau-2
+
+[www.maihuyencorp.com]
+match = 4.0%%
+title = Mai Huyền - Chiếu nhựa cao cấp - Hanoi
+url = https://www.maihuyencorp.com/
 
