--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-06 11:33:10
+lastsearch = 2024-08-06 14:31:20
 
 [chanrathanhthuy.com]
-match = -9.7%%
-title = Nên chọn màu sắc chăn ga gối đệm theo tuổi chồng hay vợ
-url = https://chanrathanhthuy.com/tin-tuc/nen-chon-mau-sac-chan-ga-goi-dem-theo-tuoi-chong-hay-vo-1273.html
+match = -3.2%%
+title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
+url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
 
 [demxanh.com]
 match = -16.1%%
