--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-06 11:34:46
+lastsearch = 2024-08-06 14:39:28
 
 [shopee.vn]
-match = -126.3%%
-title = Chiếu trúc chiếu tre cho trẻ em, chieu truc hat nằm đẹp ...
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-cho-trẻ-em-chieu-truc-hat-nằm-đẹp-mát-an-toàn-i.49212472.796826351
+match = -152.6%%
+title = [Có sẵn] Chiếu trúc chiếu tre cho trẻ em, chieu truc hat nằm ...
+url = https://shopee.vn/-Có-sẵn-Chiếu-trúc-chiếu-tre-cho-trẻ-em-chieu-truc-hat-nằm-đẹp-mát-an-toàn-i.610736536.19889705939?publish_id=&sp_atk=af5df5ac-0fd0-4055-b8be-0e66d8e9614c&xptdk=af5df5ac-0fd0-4055-b8be-0e66d8e9614c
 
 [chieutrelanlan.com]
 match = -105.3%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1mx1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m/chieu-truc-hat-nho-khong-vien-mau-vang-1mx1m9-94.html
 
 [www.youtube.com]
-match = -131.6%%
-title = MƯA HÈ ♫ Tú Anh - Nhạc Thiếu Nhi Mùa Hè Vui Nhộn Cho ...
-url = https://www.youtube.com/watch?v=ZbNN7ZZ1YOk
+match = -173.7%%
+title = 30 Bài hát thiếu nhi bé ăn ngon ngủ ngon - Anh Phi Công Ơi ...
+url = https://www.youtube.com/watch?v=qVTTqOfNSJQ
 
 [dochoihoangthu.com]
 match = -121.1%%
