--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-08-06 05:54:46
+lastsearch = 2024-08-06 14:39:05
 
 [www.mantubung.com]
-match = -138.9%%
-title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
-url = https://www.mantubung.com/
+match = -100.0%%
+title = Màn trẻ em tự bung chống muỗi đa năng 80cm * 100cm
+url = https://www.mantubung.com/man-tre-em-tu-bung-chong-muoi-da-nang-84845.html
 
 [manbinhminh.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -127.8%%
-title = Màn chụp cho bé - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
-url = https://shopee.vn/list/màn chụp/cho bé
+match = -100.0%%
+title = màn chụp cho bé giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp cho bé
 
 [h5.lazada.vn]
 match = -33.3%%
@@ -47,14 +47,14 @@ title = Mùng Tự Bung Bảo Lộc 1m8 x 2m Loại 2 Cửa Cao Cấp ...
 url = https://www.mungtubung.com/mung-tu-bung-1m8-loai-2-cua.html
 
 [mungmocmien.com]
-match = -22.2%%
-title = Mùng chụp tự bung Đỉnh Rộng MỘC MIÊN
-url = https://mungmocmien.com/collections/mung-chup-tu-bung-dinh-rong
+match = -111.1%%
+title = Mùng ngủ em bé ( mùng chụp em bé, mùng nôi em bé...)
+url = https://mungmocmien.com/collections/mung-chup-em-be
 
 [tiki.vn]
-match = -72.2%%
-title = Màn chụp tự bung hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=màn chụp tự bung
+match = -77.8%%
+title = Màn chụp cho bé hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=màn chụp cho bé
 
 [mungchup.com]
 match = 5.6%%
@@ -72,9 +72,9 @@ title = Màn Chụp Chống Muỗi Tự Bung Cho Trẻ Em Evon Việt Nam
 url = https://ichikobaby.com/san-pham/man-chup-chong-muoi-tu-bung-cho-tre-em-evon-viet-nam/
 
 [www.lazada.vn]
-match = -116.7%%
-title = Màn Chụp Cho Bé Gấp Gọn, Mùng Chụp Tự Bung Chống ...
-url = https://www.lazada.vn/products/man-chup-cho-be-gap-gon-mung-chup-tu-bung-chong-muoi-tre-em-dung-cho-che-giuong-va-noi-cui-tien-loi-i1531954275.html
+match = -33.3%%
+title = Màn chụp tự bung dành cho trẻ em không cửa
+url = https://www.lazada.vn/products/man-chup-tu-bung-danh-cho-tre-em-khong-cua-i1739891044.html
 
 [www.mungbaobao.com]
 match = -5.6%%
@@ -115,4 +115,9 @@ url = https://www.facebook.com/mungchupbaobao/
 match = -133.3%%
 title = Màn gấp gọn tự bung - mùng chụp chống muỗi cho bé sơ ...
 url = https://m.facebook.com/reel/432901842905883/
+
+[vn.my-best.com]
+match = -144.4%%
+title = Top 10 Màn Chụp Cho Bé tốt nhất hiện nay [Tư Vấn Từ ...
+url = https://vn.my-best.com/36726
 
