--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-06 13:46:24
+lastsearch = 2024-08-06 14:32:47
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -14,7 +14,7 @@ url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome
 [demxanh.com]
 match = -19.0%%
 title = Đệm bông ép Everhome 1m8 giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-everhome-1m8-gia-bao-nhieu.html
+url = https://demxanh.com/dem-bong-ep-everhome-1m8-gia-bao-nhieu.html?srsltid=AfmBOorRmuphKq_WxwLMhvXVMl5nFDnyf0C_uJB506z0oxwlrQRP4iJk
 
 [www.ebay.com]
 match = -100.0%%
@@ -27,9 +27,9 @@ title = What are some examples where Vietnamese was written ...
 url = https://www.quora.com/What-are-some-examples-where-Vietnamese-was-written-in-mixed-Han-Latin-script
 
 [sieuthidemonline.vn]
-match = -85.7%%
-title = Đệm cao su thiên nhiên cao cấp Lavender Everhome
-url = https://sieuthidemonline.vn/dem-cao-su-lavender/
+match = -61.9%%
+title = Đệm Foam Osakawa Everhome - SieuthidemOnline.vn
+url = https://sieuthidemonline.vn/dem-foam-osakawa-everhome/
 
 [thegioidemviet.vn]
 match = -9.5%%
@@ -39,7 +39,7 @@ url = https://thegioidemviet.vn/dem-bong-ep/
 [www.diepxuan.com]
 match = 14.3%%
 title = Nệm EverHome TC 160x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome-tc-160x200x09.html
+url = https://www.diepxuan.com/nem-everhome-tc-160x200x09.html?srsltid=AfmBOoqjNK89kV4cGjUMKQ-FpuRLz_tyIKE8uZ2g0Od1seEO6GH_-Tny
 
 [bachhoadem.vn]
 match = 28.6%%
@@ -54,7 +54,7 @@ url = https://demsingapore.com/dem-bong-ep-everhome-vo-tc.html
 [demviethome.vn]
 match = -52.4%%
 title = Tổng kho đệm bông ép chính hãng tại Hà Nội
-url = https://demviethome.vn/dem-bong-ep/
+url = https://demviethome.vn/dem-bong-ep/?srsltid=AfmBOopvGsLVQtQz7qdEFP7U8SSwZBznLVMfY0KUevl2uoGQ6q9tnhQJ
 
 [www.tiktok.com]
 match = -95.2%%
