--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-06 13:56:12
+lastsearch = 2024-08-06 14:35:32
 
 [www.lazada.vn]
 match = -61.1%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -133.3%%
-title = Nem nướng Chấn Hưng gia truyền nổi tiếng ở quận 5 ...
-url = https://www.tiktok.com/@tinhtungtangvn/video/7350226094391364866
+match = -77.8%%
+title = How Long to Cook Nem Nuong in Air Fryer
+url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
 
 [www.diepxuan.com]
 match = 11.1%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -83.3%%
-title = Ăn gì? Ở đâu? | NEM NƯỚNG NHA TRANG CHỈ...
-url = https://m.facebook.com/groups/hanoiangiodau/posts/1905052076634501/
+match = -122.2%%
+title = Người Việt Bolsa/Orange County | 🌮NEM CHUA THANH ...
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2900660673417630/
 
 [emartmall.com.vn]
 match = 0.0%%
